CI images update

--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-10 14:26:03
+lastsearch = 2024-08-10 14:59:33
 
 [www.lazada.vn]
 match = -193.3%%
 title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOorHCnlEoMr3DTZ9iAQ4_9na36Wv1t3f-8OcqqtUYlt5vbuvnugH
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOoqZ0h66atTRc4-SOm_azKDmm-XhIb4pgyfbzBVCCa7iXqLvzSAP
 
 [shopee.vn]
 match = 13.3%%
@@ -19,22 +19,22 @@ url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOortagCnysyqzIlVTVMsniMjQ7j19odyN0I-CYDdj47W-9zPUfi0
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOoopQh9Chd_TGG9GOWVi1FWb57y7sxQaTLMV184oDxU8Xe8FhVrd
 
 [chus.vn]
 match = -173.3%%
 title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
-url = https://chus.vn/vo-goi-vuong-hmong/
+url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOoo_vqnUlcA4OVYJI_RSAFiQRdP70DCNmfEQ_r4yhch8MM3uMX-3
 
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOoqljEl-Fz5WeBuJVgL7MfYKmKgHAS8wBvjzd7znSZsIwGSxOffB
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOorJfX-jBDOsGP-yKNWhaF9bm9UriLDwR7QKVOkhFs7PyrGuJgDs
 
 [lepetit.com.vn]
-match = -173.3%%
-title = Vỏ gối vuông sofa họa tiết hình học 45x45 cm - Le Petit
-url = https://lepetit.com.vn/vo-goi-vuong-sofa-hoa-tiet-bac-au-45x45-cm
+match = -6.7%%
+title = Vỏ gối vuông Ấn Độ - Le Petit
+url = https://lepetit.com.vn/vo-goi-vuong-an-do
 
 [flexhouse.vn]
 match = -160.0%%
