--- a/images/chieu-dieu-hoa-lua-120x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-120x190.html
 lastopen = 2024-08-08 20:39:18
 
 [search]
-lastsearch = 2024-08-10 14:33:17
+lastsearch = 2024-08-10 14:56:32
 
 [demxanh.com]
 match = 0.0%%
@@ -70,4 +70,9 @@ url = https://thegioidemtot.vn/434-chieu-dieu-hoa.html
 match = 42.3%%
 title = Chiếu điều hòa mây 120x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html?srsltid=AfmBOoqBvEkRpV94oevQDxNhBBupeUtcWwMc9jaV9yIuyteSFR1IPxLu
+
+[khodem.vn]
+match = -19.2%%
+title = Chiếu điều hòa - Chiếu nằm mát nhất cho mùa hè 2019
+url = https://khodem.vn/chieu-dieu-hoa/
 
