--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-10 14:22:55
+lastsearch = 2024-08-10 14:45:01
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -253.8%%
-title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
-url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
+match = -200.0%%
+title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
+url = https://www.deutschconnectorstore.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -234,7 +234,7 @@ url = https://www.ipassio.com/blog/list-of-ragas-in-indian-classical-music
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001
+url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOopv0LKnoJ_t6_a82d9TCUHdT-gamXQZgTWfjQEaUJpJf4utZGUt
 
 [pubs.acs.org]
 match = -330.8%%
@@ -668,8 +668,8 @@ url = https://myfwc.com/fishing/saltwater/recreational/blue-crab/
 
 [cenmed.com]
 match = -23.1%%
-title = Wire 16 Ga Ni Chrome 60/16
-url = https://cenmed.com/spare-parts-u31-i5160/
+title = Wire 14 Ga Ni Chrome 60/16
+url = https://cenmed.com/spare-parts-u31-i5140/
 
 [aging.georgia.gov]
 match = -46.2%%
@@ -699,7 +699,7 @@ url = https://www.parker.com/content/dam/Parker-com/Literature/Sporlan/Sporlan-p
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOoptYeDXbVgncg3_88qiC2Qdksz1HyyEA_ScG6Cr7pVX0jiIb3mh
 
 [www.historycolorado.org]
 match = -115.4%%
