--- a/images/nem-caosu-lien-a-160x200x10/config.ini
+++ b/images/nem-caosu-lien-a-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-160x200x10.html
 lastopen = 2024-07-02 14:09:53
 
 [search]
-lastsearch = 2024-08-10 13:54:41
+lastsearch = 2024-08-10 14:47:49
 
 [nemgiakho.com]
 match = 7.4%%
@@ -22,9 +22,9 @@ title = Liên Á - Nệm Cao Su Thiên Nhiên Classic
 url = https://fefurniture.com.vn/products/nem-cao-su-thien-nhien-lien-a-classic
 
 [demxanh.com]
-match = 14.8%%
-title = Đệm cao su Liên Á Classic (dày 5cm, 10cm)
-url = https://demxanh.com/dem-cao-su-lien-a-classic.html
+match = -33.3%%
+title = Đệm cao su Liên Á L'ADOME chính hãng, bảo hành 12 năm
+url = https://demxanh.com/dem-cao-su-lien-a-l-a-dome.html?srsltid=AfmBOooHTPdCWjMlwMEFHXnvqG95b408JFwDKuLjPor-glRPAAO9V2MN
 
 [www.thegioinemvip.com]
 match = 0.0%%
@@ -34,7 +34,7 @@ url = https://www.thegioinemvip.com/nem-cao-su-lien-a-classic-new-160x200x10cm-g
 [www.lazada.vn]
 match = -7.4%%
 title = Nệm Cao su Liên Á Classic 160x200x10. Tặng kèm cover ...
-url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html
+url = https://www.lazada.vn/products/nem-cao-su-lien-a-classic-160x200x10-tang-kem-cover-bao-ve-nem-i536998043.html?srsltid=AfmBOopKD8jUug-lqksYe2zFS_wAvkmTC6gv5ukOX8zmk-pU2HGu59Et
 
 [tiki.vn]
 match = -11.1%%
