--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-10 14:39:46
+lastsearch = 2024-08-10 14:45:44
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -685,4 +685,9 @@ url = https://dam-oclc.bac-lac.gc.ca/download?id=25f26d4e-0fb7-48b9-ae33-6e9b3f4
 match = -104.3%%
 title = 'Big Brother' Sneak Peek: Kimo Tells Tucker a Key Secret ...
 url = https://www.mycouriertribune.com/lifestyles/entertainment/big-brother-sneak-peek-kimo-tells-tucker-a-key-secret-video/article_1617f93a-04a3-5cec-9c37-a0657008888c.html
+
+[www.bloomberg.com]
+match = -18.8%%
+title = Bloomberg Europe
+url = https://www.bloomberg.com/europe
 
