CI images update

--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-08-10 14:21:30
+lastsearch = 2024-08-10 15:30:58
 
 [erado.vn]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-phong-ngu-na18/
 
 [www.lazada.vn]
-match = -125.0%%
-title = Thảm nỉ nhung in hình cao cấp giữ nhiệt tốt, đủ kích cỡ ...
-url = https://www.lazada.vn/products/tham-ni-nhung-in-hinh-cao-cap-giu-nhiet-tot-du-kich-co-cho-moi-loai-giuong-gia-dinh-16x2m-hoac-18x2m-hoac-222m-de-dang-gap-gon-hoac-mang-di-moi-noi-co-the-trai-giuong-trai-san-nha-nen-nha-i934714491.html
+match = -5.0%%
+title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -72,8 +72,8 @@ title = Bộ giường tủ trắng nhập khẩu HFC-BGT R06-18 cao cấp
 url = https://noithathofaco.net/san-pham/bo-giuong-tu-trang-nhap-khau-hfc-bgt-r06-18-cao-cap/
 
 [everonvn.com.vn]
-match = -75.0%%
-title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
+match = -115.0%%
+title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu? - Everon
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatdaithanh.vn]
