--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-10 12:40:34
+lastsearch = 2024-08-10 15:28:35
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -33.3%%
-title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22002
-url = https://www.everonvn.vn/chi-tiet/everon-esm22002.html
+match = -87.5%%
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -38,8 +38,8 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 
 [everon.com.vn]
 match = -66.7%%
-title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
+title = Bộ Chăn Ga Everon ESB 22055 Bộ Sưu Tập Mới Nhất Năm ...
+url = https://everon.com.vn/bo-chan-ga-everon-esb-22055/
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -58,8 +58,8 @@ url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
 
 [dongahome.vn]
 match = -12.5%%
-title = Bộ chăn ga SH_UC22 018 cao cấp Sông Hồng
-url = https://dongahome.vn/bo-chan-ga-sh_uc22-018
+title = Bộ chăn ga SH_UC22 019 cao cấp Sông Hồng
+url = https://dongahome.vn/bo-chan-ga-sh_uc22-019
 
 [thegioinem.com]
 match = -12.5%%
@@ -135,4 +135,9 @@ url = https://flexhouse.vn/bo-chan-ga-vo-goi-hoa-tiet-truu-tuong-zh6831
 match = -79.2%%
 title = Ga chun trần everon 2*2,2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ga chun trần everon 2*2,2m
+
+[everonvn.net]
+match = -16.7%%
+title = Bộ Everon - EPM23062 - Everonvn.net
+url = https://everonvn.net/bo-chan-ga-goi-everon-epm-23062-2/
 
