--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-10 11:27:04
+lastsearch = 2024-08-10 15:31:40
 
 [vnexpress.net]
 match = -128.6%%
@@ -294,7 +294,7 @@ url = https://saigonthanhcong.com/cung-kham-pha-ve-dep-cua-bien-voi-tour-vung-ta
 [hita.com.vn]
 match = -114.3%%
 title = 10+ địa điểm check in Vũng Tàu đẹp say mê khiến bạn ...
-url = https://hita.com.vn/10-dia-diem-check-in-vung-tau-dep-say-me-khien-ban-quen-loi-ve-post-2861.html
+url = https://hita.com.vn/10-dia-diem-check-in-vung-tau-dep-say-me-khien-ban-quen-loi-ve-post-2861.html?srsltid=AfmBOorla7NQlu5dNvPl0rUM71X4jsaf2zWZrh8nzxfIFKzdwNQbpRc7
 
 [bariavungtautourism.com.vn]
 match = -123.8%%
