--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-10 14:31:54
+lastsearch = 2024-08-10 15:17:38
 
 [zhangbrickshop.com]
 match = -133.3
@@ -57,9 +57,9 @@ title = Xác định hàm lượng vitamin D2 từ một số loài nấm lớn 
 url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 
 [m.facebook.com]
-match = -33.3%%
-title = tìm trẻ lạc d2 NGT Long Biên✌️✌️✌️✌️✌️
-url = https://m.facebook.com/groups/HocSinhHN/posts/1619809158664939/
+match = -180.0%%
+title = Học sinh Hà Nội | tìm b học D1 nguyễn gia thiều ạa
+url = https://m.facebook.com/groups/HocSinhHN/posts/1619811161998072/
 
 [dkv.biz.vn]
 match = -166.7%%
@@ -289,7 +289,7 @@ url = https://rentapartment.vn/vietnam-zip-postal-code/
 [alphardaudio.us]
 match = -100.0%%
 title = Machete ML-10S D2 10" 600W MAX Subwoofer
-url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer?srsltid=AfmBOor-6hRocQ2AVoXr5TpstHg_4fqvEDhcxrnTeb59N4XvpsFuCIlo
+url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer
 
 [www.handspan.com]
 match = -126.7%%
