--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-10 14:33:59
+lastsearch = 2024-08-10 15:29:16
 
 [www.mantubung.com]
 match = -100.0%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -61.1%%
-title = màn tự bung giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn tự bung
+match = -100.0%%
+title = màn chụp cho bé giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -74,7 +74,7 @@ url = https://ichikobaby.com/san-pham/man-chup-chong-muoi-tu-bung-cho-tre-em-evo
 [www.lazada.vn]
 match = -116.7%%
 title = Màn Chụp Cho Bé Gấp Gọn, Mùng Chụp Tự Bung Chống ...
-url = https://www.lazada.vn/products/man-chup-cho-be-gap-gon-mung-chup-tu-bung-chong-muoi-tre-em-dung-cho-che-giuong-va-noi-cui-tien-loi-i1531954275.html
+url = https://www.lazada.vn/products/man-chup-cho-be-gap-gon-mung-chup-tu-bung-chong-muoi-tre-em-dung-cho-che-giuong-va-noi-cui-tien-loi-i1531954275.html?srsltid=AfmBOoq4pq7p69Vw7Ppom4N4meH3Xnzy0MtKvhuldVUakwpEGqyNsfHi
 
 [www.mungbaobao.com]
 match = -5.6%%
