--- a/images/ruot-goi-vuong-warmdream-45x45/config.ini
+++ b/images/ruot-goi-vuong-warmdream-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-vuong-warmdream-45x45.html
 lastopen = 2024-06-07 01:58:20
 
 [search]
-lastsearch = 2024-08-10 14:58:53
+lastsearch = 2024-08-10 15:17:17
 
 [bellizeno.com]
 match = -14.3%%
@@ -69,7 +69,7 @@ url = https://demxanh.com/goi-tua-dem-xanh.html
 [www.lazada.vn]
 match = 3.3%%
 title = Ruột gối vuông , gối vương cao cấp hàng cao cấp
-url = https://www.lazada.vn/products/ruot-goi-vuong-goi-vuong-cao-cap-hang-cao-cap-i2405233379.html
+url = https://www.lazada.vn/products/ruot-goi-vuong-goi-vuong-cao-cap-hang-cao-cap-i2405233379.html?srsltid=AfmBOopH9Ed7-ZO4C1zjBfCZd1QvMK8f4PJaiV2ZPC4cQo4-tmW6Pt_h
 
 [www.fortheloveofport.com]
 match = -13.0%%
@@ -144,5 +144,5 @@ url = https://vn.biggo.com/s/ruột+gối+bông+gòn+cao+cấp/
 [metric.vn]
 match = -23.3%%
 title = Báo cáo thị trường Ruột gối vuông dành cho doanh nghiệp
-url = https://metric.vn/ruot-goi-vuong
+url = https://metric.vn/ruot-goi-vuong?srsltid=AfmBOor2nzBTzaxEcqLGx2w1YmQK_WvhX6j2_MPjIRXSVm5BVgKE4Y_W
 
