--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-10 11:24:15
+lastsearch = 2024-08-10 15:17:59
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,9 +17,9 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = 8.3%%
-title = Press releases
-url = https://www.tuigroup.com/en-en/media/press-releases
+match = -333.3%%
+title = TUI Group leading the way in support for guests and hotel ...
+url = https://www.tuigroup.com/en-en/media/press-releases/2024/2024-06-06-tui-group-leading-the-way-in-support-for-guests-and-hotel-partners-amid-fti-insolvency
 
 [www.tui.nl]
 match = -316.7%%
