--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-10 14:48:50
+lastsearch = 2024-08-10 15:21:01
 
 [everonvn.com.vn]
 match = -94.4%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Vỏ gối EP1818 45x65
 url = https://www.diepxuan.com/vo-goi-ep1818-45x65.html
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
+match = -100.0%%
+title = Vỏ gối EP1812 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-ep1812-45x65.html
 
 [shopee.vn]
 match = -127.8%%
