--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-10 14:55:50
+lastsearch = 2024-08-10 15:36:16
 
 [dreamland.vn]
-match = 18.2%%
-title = Chăn ga gối đệm cao cấp Dreamland
-url = http://dreamland.vn/
+match = 7.5%%
+title = Dreamland chuyên chăn ga gối đệm cao cấp
+url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -28,8 +28,8 @@ url = https://www.facebook.com/Dreamland.com.vn/
 
 [thegioidemonline.com]
 match = 62.8%%
-title = Bộ chăn ga gối Dreamland cotton lụa NK PT29
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-9.html
+title = Bộ chăn ga gối Dreamland cotton lụa NK PT25
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-2-5.html
 
 [demdreamland.vn]
 match = 31.0%%
