--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-10 11:47:12
+lastsearch = 2024-08-10 15:32:53
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -100.0%%
-title = Địa chí Bá̆c Giang di sản hán nôm - Page 494 - Google Books Result
-url = https://books.google.com/books?id=aYBuAAAAMAAJ&pg=PA494&lpg=PA494&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=oMfDwizQeA&sig=ACfU3U2EgwNIh_OXIrZnCOPRysv688Cy_w&hl=en&sa=X&ved=2ahUKEwja1MSgz-mHAxUyFVkFHYaOI8oQ6AF6BAgYEAM
+match = -116.0%%
+title = Địa chí Bắc Giang: địa lý và kinh tế - Page 302 - Google Books Result
+url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA302&lpg=PA302&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=7KD0ud10xI&sig=ACfU3U0RaQNIVxrqDAU1XGKOgQkPxB0lUg&hl=en&sa=X&ved=2ahUKEwj00v_YgeqHAxULFlkFHeV1O3cQ6AF6BAgXEAM
 
 [cellphones.com.vn]
 match = -52.0%%
