--- a/images/man-khung/config.ini
+++ b/images/man-khung/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-khung.html
 lastopen = 2024-06-07 00:53:59
 
 [search]
-lastsearch = 2024-08-10 09:14:39
+lastsearch = 2024-08-10 15:35:15
 
 [mungmocmien.com]
 match = -88.9%%
@@ -12,9 +12,9 @@ title = Mùng khung inox gắn tường
 url = https://mungmocmien.com/collections/mung-khung-inox-gan-tuong-man-khung
 
 [easydream.vn]
-match = -422.2%%
-title = Màn Khung Không Khoan Tường GIÁ RẺ CHẤT ... - easy dream
-url = https://easydream.vn/man-khung-dep-khong-khoan-tuong-thu-xep-gon-day-keo-rong-roc-mung-ngu-hien-dai-cac-loai-145-15.html
+match = -255.6%%
+title = CÁC LOẠI MÀN KHUNG XẾP GỌN THÔNG MINH ĐẸP
+url = https://easydream.vn/man-khung-xep-gon-4-11.html
 
 [mankhung.com]
 match = -422.2%%
@@ -24,7 +24,7 @@ url = https://mankhung.com/
 [everonvn.com.vn]
 match = -444.4%%
 title = [HOT ]Màn Khung Xếp Gọn Thông Minh Thế Hệ Mới Đẹp Nhất ...
-url = https://everonvn.com.vn/everon/781/man-khung-xep-gon-cao-cap-tien-loi
+url = https://everonvn.com.vn/everon/781/man-khung-xep-gon-cao-cap-tien-loi?srsltid=AfmBOoqzHsRGLogUhw2blhnRGAIZlINB1eT9E1rUXE7HxC2qmVRUnPPY
 
 [tiki.vn]
 match = -388.9%%
