--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-10 14:27:01
+lastsearch = 2024-08-10 15:44:46
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -122,9 +122,9 @@ title = Diabetes Research, Education, Advocacy | ADA
 url = https://diabetes.org/
 
 [mn.gov]
-match = -100.0%%
-title = Minnesota Department of Human Services
-url = https://mn.gov/dhs/
+match = -226.7%%
+title = Minnesota.gov Portal / mn.gov // Minnesota's State Portal
+url = https://mn.gov/
 
 [www.uscis.gov]
 match = -206.7%%
@@ -704,7 +704,7 @@ url = https://wayne.edu/
 [www.usnews.com]
 match = 0.0%%
 title = 
-url = https://www.usnews.com/best-colleges/jhu-2077/overall-rankings
+url = https://www.usnews.com/best-colleges/morgan-state-university-2083
 
 [www.legodiscoverycenter.com]
 match = -186.7%%
