--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-10 14:50:57
+lastsearch = 2024-08-10 15:44:25
 
 [www.bible.com]
-match = 0.0%%
-title = 
-url = https://www.bible.com/bible/111/MAT.20.22-23.NIV
+match = -88.2%%
+title = LUKA 20 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/LUK.20.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
