--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-10 11:37:12
+lastsearch = 2024-08-10 15:46:49
 
 [www.everonvn.vn]
 match = 80.8%%
@@ -62,9 +62,9 @@ title = Nệm lò xo túi Everon Pocket pops 2024
 url = https://nemgiakho.com/nem-lo-xo-tui-everon-pocket-pops.html
 
 [everon.com.vn]
-match = -34.6%%
-title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt Nam ...
-url = https://everon.com.vn/dem-lo-xo-pocket-pops/?srsltid=AfmBOoqQrbsR5ZnPL9R8kXPQxsUbY9FGekASZV0T8Xn0RdnZncNOKGUw
+match = -19.2%%
+title = Đệm Lò Xo Everon Pocket Pops | Chính Hãng Tại Việt ...
+url = https://everon.com.vn/dem-lo-xo-pocket-pops/
 
 [demxanh.com]
 match = -19.2%%
