--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-10 15:30:58
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOooD0PRwKBCJgpEITgJuKrSOtKLSnKn78_IjSt6DMink_7EA-Ki7
 
 [shopee.vn]
 match = -100.0%%
@@ -24,7 +24,7 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/
+url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOoowqLV3LLrLos477eK0MJMOzlye-FD_1exYma3c8UhqCXsZ0Scm
 
 [www.lazada.vn]
 match = -5.0%%
@@ -104,7 +104,7 @@ url = https://dogothanhha.vn/san-pham/bo-giuong-ngu-co-dien-cd-18--1467&p=3
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 18 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOopQ7zbiDPId6XPvEWDiiM1wK4sgQWUTIzHBzIbDnrmtKBk5y99B
 
 [giuongbenhbaominh.vn]
 match = -95.0%%
