--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-08-10 13:19:10
+lastsearch = 2024-08-10 15:42:19
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooU7WlIyLxQwUNzm9PWJ_q02SDl0j1p6GafNzyD9qvnvhRVLkR-
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.noithatpassion.com]
 match = -52.2%%
