CI images update

--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-10 15:28:35
+lastsearch = 2024-08-10 15:46:42
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -38,8 +38,8 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 
 [everon.com.vn]
 match = -66.7%%
-title = Bộ Chăn Ga Everon ESB 22055 Bộ Sưu Tập Mới Nhất Năm ...
-url = https://everon.com.vn/bo-chan-ga-everon-esb-22055/
+title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/?srsltid=AfmBOoqAqGU2Gd-kh8GfYvGS05JoubIzPq-mefSExkaAs0KyPTpcgXF-
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -114,7 +114,7 @@ url = https://m.facebook.com/p/Nam-phuongshop-100023919678729/
 [www.everonvni.vn]
 match = 0.0%%
 title = BỘ CHĂN GA GỐI CÁNH ĐỒNG NẮNG - EST24035
-url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
+url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/?srsltid=AfmBOorzl2qRSk3KqpU55YUao-BqrcnHloSkptFQ6d25E96YcNeexsnO
 
 [lasantevn.com]
 match = -66.7%%
