--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-10 14:50:36
+lastsearch = 2024-08-10 15:52:36
 
 [www.youtube.com]
 match = -40.7%%
@@ -19,7 +19,7 @@ url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-die
 [jysk.vn]
 match = -33.3%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooUtExbd6N6HbIfAH5DKHGNSU0taIYL2cHyPyccgKHJhmX4e-IF
 
 [elambo.vn]
 match = -3.7%%
@@ -189,7 +189,7 @@ url = https://demhong.vn/chan-ga-goi-trang-ke-soc/
 [dienmaycholon.com]
 match = -44.4%%
 title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ...
-url = https://dienmaycholon.com/goi-vo-goi-simplehome
+url = https://dienmaycholon.com/goi-vo-goi-simplehome?srsltid=AfmBOoo0VqvseoO86GNOmsgjfXQjLcdD6KPcM8EHncbISTOTL83qZbkU
 
 [metruyen.me]
 match = 33.3%%
@@ -309,5 +309,5 @@ url = https://zingtruyen.top/chapter/duoc-lieu/3071807/duoc-lieu/8881556.html
 [www.liena.com.vn]
 match = 18.5%%
 title = Có Nên Giặt Ruột Gối Hay Không?
-url = https://www.liena.com.vn/co-nen-giat-ruot-goi
+url = https://www.liena.com.vn/co-nen-giat-ruot-goi?srsltid=AfmBOopNAhg-AvqKwgWZvzFWezXtT6aMMyu0UCK9aZAluCSXEDaNsmzL
 
