--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-10 13:49:12
+lastsearch = 2024-08-10 15:50:27
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 14
-url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
+url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html?srsltid=AfmBOopl-ePEEVbvVwc8H_QPuwv2qeS9O6HINJlrFjV-FDhBJTAEx9NZ
 
 [shopee.vn]
 match = -120.0%%
@@ -24,7 +24,7 @@ url = https://noithatami.com/giuong-ngu-boc-dem-1m8/
 [ninhouse.vn]
 match = -45.0%%
 title = Giá drap trải giường | Bộ chăn ga gối đệm ...
-url = https://ninhouse.vn/collections/drap
+url = https://ninhouse.vn/collections/drap?srsltid=AfmBOor8kqBTho1GN1NnIu9X4FRHbZj5AKcagE3QKO_jfDbI2DAi1jUb
 
 [giuongxep.com]
 match = -70.0%%
@@ -67,9 +67,9 @@ title = Giường điện đa chức năng tập đứng DCN-14
 url = https://giuongbenh.com/giuong-dien-da-chuc-nang-tap-dung-dcn-14
 
 [tiki.vn]
-match = -75.0%%
-title = Thảm trải chân giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải chân giường
+match = -50.0%%
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [noithattamviet.net]
 match = -10.0%%
@@ -109,12 +109,12 @@ url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-
 [www.lazada.vn]
 match = 15.0%%
 title = Thảm Giường Ngủ Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/tham-giuong-ngu/
+url = https://www.lazada.vn/tag/tham-giuong-ngu/?srsltid=AfmBOoqvpzJKNvQWYCmeNRJ3af7UYAs-CrlMGOCXf9GFAvEON1A_15Lg
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOoo0zYk-2dp3CYEPWxTuFJj21ELEjJoITV0uIBg-luyQ8puN3VzP
 
 [www.sendo.vn]
 match = -95.0%%
@@ -279,5 +279,5 @@ url = https://www.mdfuni.com/san-pham/combo-giuong-tu-hien-dai-nhap-khau-mdc-14/
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 14 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-14?srsltid=AfmBOooFu27VGVz6VGAMg5liSDaJzQyDvnwyoegKqIJFCr5oEGEhahE4
 
