CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-10 15:47:10
+lastsearch = 2024-08-10 16:27:53
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -32,9 +32,9 @@ title = "Chết rồi sẽ đi về đâu?" Thầy giải thích RẤT HAY nghe 
 url = https://www.youtube.com/watch?v=0GAlh_VjR48
 
 [tuyensinh247.com]
-match = -218.8%%
-title = Con lắc lò xo có vật nặng khối lượng m = 100g, chiều dài ...
-url = https://tuyensinh247.com/bai-tap-62416.html
+match = -225.0%%
+title = Một con lắc đơn có chiều dài dây treo l = 90 cm, khối lượng ...
+url = https://tuyensinh247.com/bai-tap-18187.html
 
 [asisov.org.vn]
 match = -125.0%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -22.2%%
-title = Nhược Lạc
-url = https://www.facebook.com/nhuoclac.writing/
+match = -75.0%%
+title = LÁC SHOP - Để em ấy ở đây và mong ...
+url = https://www.facebook.com/photo.php?fbid=725253433109896&id=100068757374352&set=a.487663966868845&locale=ta_IN
 
 [baocaobang.vn]
 match = -218.8%%
@@ -312,9 +312,9 @@ title = Con đường cuối của 'trùm' ma túy Vũ Văn Đảng
 url = https://baonghean.vn/con-duong-cuoi-cua-trum-ma-tuy-vu-van-dang-10275067.html
 
 [olm.vn]
-match = -193.8%%
-title = Một con lắc đơn chiều dài l = 1,8m, một đầu gắn với vật ...
-url = https://olm.vn/hoi-dap/tim-kiem?id=287400362122&q=Một con lắc đơn chiều dài l = 1,8m, một đầu gắn với vật khối lượng 200g. Thẳng phía dưới điểm treo cách điểm treo một đoạn l 2 có một cái đinh. Kéo vật ra khỏi vị trí cân bằng sao ch...
+match = -212.5%%
+title = Một mảnh đất hình thang có đáy lớn 27,6m, đáy bé bằng 2 ...
+url = https://olm.vn/cau-hoi/mot-manh-dat-hinh-thang-co-day-lon-276m-day-be-bang-23-day-lon-chieu-cao-85m-nguoi-ta-trong-lac-tren-manh-dat-do-cu-1m-vuong-thu-duoc-3kg-lac-c.68946291283
 
 [mizunoforum.com]
 match = -55.6%%
@@ -580,4 +580,14 @@ url = https://viettelpost.com.vn/tin-tuc/giao-hang-nhanh-ho-chi-minh/
 match = -81.2%%
 title = GIẢI BÓNG RỔ CHUYÊN NGHIỆP VIỆT NAM
 url = https://vba.vn/clubs/saigon-heat
+
+[es.catholic.net]
+match = -193.8%%
+title = Andrés Dung-Lac y 116 compañeros, Santos - Catholic.net
+url = http://es.catholic.net/op/articulos/35461/cat/1239/andres-dung-lac-y-116-companeros-santos.html
+
+[khoahoc.vietjack.com]
+match = -187.5%%
+title = Một con lắc đơn có chiều dài 45cm với vật nhỏ có khối ...
+url = https://khoahoc.vietjack.com/question/690360/mot-con-lac-don-co-chieu-dai-45cm-voi-vat-nho-co-khoi-luong-102g-mang
 
