--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-10 15:56:07
+lastsearch = 2024-08-10 16:16:19
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOopO1TIQIQXHUgkO_5H3zQtJG02JxT2T9WINWXM-WL0JRqdKF-uH
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [goni.vn]
 match = 14.8%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [shopee.vn]
-match = -37.0%%
-title = Chiếu mây điều hòa, làm từ sợi mây cao cấp, chiều nằm ...
-url = https://shopee.vn/Chiếu-mây-điều-hòa-làm-từ-sợi-mây-cao-cấp-chiều-nằm-mát-và-giá-rẻ-i.555764372.21208905703
+match = -29.6%%
+title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
+url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
 
 [foreverbedding.net]
 match = -59.3%%
@@ -84,7 +84,7 @@ url = https://www.congnghieptieudung.vn/su-that-ve-cong-dung-cua-chieu-dieu-hoa-
 [spacet.vn]
 match = -40.7%%
 title = Hướng dẫn giặt chiếu điều hòa đúng cách, đơn giản, hiệu ...
-url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua?srsltid=AfmBOootbbMPhlzOlukybcqEYeGbSqJDbl6_llMPirvIpMvjbdo1uGWv
+url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-cach-don-gian-hieu-qua
 
 [chieutrelinhchi.com]
 match = 0.0%%
