--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-10 12:14:55
+lastsearch = 2024-08-10 16:25:15
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
-match = -12.9%%
-title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m2
+match = 16.1%%
+title = chiếu trúc giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
 match = -6.5%%
@@ -29,7 +29,7 @@ url = https://tiki.vn/search?q=chiếu trúc
 [demxanh.com]
 match = -3.2%%
 title = Chuyên cung cấp chiếu trúc hạt các hãng hàng ...
-url = https://demxanh.com/chieu-truc-hat.html?srsltid=AfmBOooTOdYaWn3yXqH5RG2okNlbPspRwbxlAOHjvZkBDXjKb6-K4_iu
+url = https://demxanh.com/chieu-truc-hat.html?srsltid=AfmBOorPxGpOgF8lBChY8lB-TdfuVvh3gOP4Ds3FKEfQmJQrgpTYBY0w
 
 [www.sendo.vn]
 match = 0.0%%
