--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-10 13:57:01
+lastsearch = 2024-08-10 16:26:34
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -362,9 +362,9 @@ title = ECON Home | ECON l Department of Economics l University ...
 url = https://www.econ.umd.edu/
 
 [profiles.ucdavis.edu]
-match = -8.3%%
-title = Bruce Hammock
-url = https://profiles.ucdavis.edu/bruce.hammock
+match = 8.3%%
+title = Pamela J Lein
+url = https://profiles.ucdavis.edu/pamela.lein
 
 [www.ess.uci.edu]
 match = -358.3%%
