--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-08-10 13:50:13
+lastsearch = 2024-08-10 16:21:27
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -62,9 +62,9 @@ title = Conception Vessel 12, CV 12, Ren-12 - Acupuncture-points.org
 url = https://www.acupuncture-points.org/conception-vessel-12.html
 
 [www.youtube.com]
-match = -340.0%%
-title = Functions of Ren 12 (CV12, Zhongwan 中脘穴)
-url = https://www.youtube.com/watch?v=W1LAqwFK9Rw
+match = -270.0%%
+title = How to needle Ren 12 Zhongwan (Middle Cavity)
+url = https://www.youtube.com/watch?v=ZPShgszI6a4
 
 [www.maciociaonline.com]
 match = -250.0%%
