--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-08-10 13:35:39
+lastsearch = 2024-08-10 16:13:05
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -59,7 +59,7 @@ url = https://www.diepxuan.com/everon/nem-everon.html?p=2
 [thegioidemonline.com]
 match = -40.0%%
 title = Bảng giá nệm Sông Hồng mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html?srsltid=AfmBOoqET2yXf6q6GArelRZ930rXHSj7ETS4CkuTRvFXytDDKoxeX0H2
+url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
@@ -79,7 +79,7 @@ url = https://everon.vip/nem?page=1&productdimensions=2033,347,2005,1999,1974,83
 [everonvietnam.com]
 match = -135.0%%
 title = cushion - mattress - | Everon - Korean Pillows & Blankets
-url = https://everonvietnam.com/en/dem-nem/page/3/
+url = https://everonvietnam.com/en/dem-nem/page/2/
 
 [thegioidemdep.com]
 match = -125.0%%
@@ -94,7 +94,7 @@ url = https://www.amazon.com/ask/questions/asin/B00IGBDXEA
 [demxanh.com]
 match = -110.0%%
 title = Bảng giá đệm bông ép Everhome khuyến mãi mới nhất ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html?srsltid=AfmBOory3kMN2DvimTviehvCZah3NrSMC3d1JAAgrqBvVYjaLzmAISv8
+url = https://demxanh.com/bang-gia-dem-bong-ep-everhome-nam-2023.html
 
 [thegioinem.com]
 match = -133.3%%
