--- a/images/tham-bali-160x230/config.ini
+++ b/images/tham-bali-160x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-bali-160x230.html
 lastopen = 2024-06-07 00:36:14
 
 [search]
-lastsearch = 2024-08-10 15:26:52
+lastsearch = 2024-08-10 16:23:12
 
 [demxanh.com]
 match = -41.2%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOooympc4i56MMbXflx-_y5_CRCa2JuHEFksnDTC1Z7kE7KJpUSz2
 
 [tiki.vn]
 match = -105.9%%
@@ -19,7 +19,7 @@ url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.
 [www.lazada.vn]
 match = -135.3%%
 title = Thảm Lì Bali Nhập Khẩu Cao Cấp, Sang Trọng 120x160 ...
-url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html
+url = https://www.lazada.vn/products/tham-trai-san-tham-li-bali-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-cho-phong-khach-phong-ngu-chup-hinhvv-i1557383752.html?srsltid=AfmBOopwtEJha7fuiJTf--9DtE7J52usPkcUvtx_sE6ELOzW5GmMxs1o
 
 [thegioidemviet.vn]
 match = -182.4%%
