CI images update

--- a/images/chieu-dieu-hoa-lua-120x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-120x190.html
 lastopen = 2024-08-08 20:39:18
 
 [search]
-lastsearch = 2024-08-10 15:53:39
+lastsearch = 2024-08-10 16:57:02
 
 [demxanh.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa mây viền lụa loại đẹp
 url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
 
 [shopee.vn]
-match = -7.7%%
-title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+match = 53.8%%
+title = CHIẾU ĐIỀU HÒA kích thước 120x190 cm
+url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-kích-thước-120x190-cm-i.63828245.1164568361
 
 [thegioichieutruc.com]
 match = -65.4%%
@@ -69,7 +69,7 @@ url = https://thegioidemtot.vn/434-chieu-dieu-hoa.html
 [www.diepxuan.com]
 match = 42.3%%
 title = Chiếu điều hòa mây 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html?srsltid=AfmBOoqBvEkRpV94oevQDxNhBBupeUtcWwMc9jaV9yIuyteSFR1IPxLu
+url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html
 
 [khodem.vn]
 match = -19.2%%
