--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-10 09:11:51
+lastsearch = 2024-08-10 16:58:25
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
 match = 4.3%%
-title = Bộ sản phẩm SH_BC23 082
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
+title = Bộ sản phẩm SH_BC23 072
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-73
 
 [everon.online]
 match = 50.0%%
@@ -67,8 +67,8 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = 2.9%%
-title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
+match = 17.6%%
+title = Dòng chăn ga gối cotton Basic mã BC-04
 url = https://songhong.info/chan-ga-goi-bc-04
 
 [kona.com.vn]
@@ -102,9 +102,9 @@ title = Bộ bọc Moder 03 (Ga chun chần)
 url = http://dreamland.vn/Bo-boc-Moder-03-(Ga-chun-chan)-i4155.html
 
 [www.everonqb.com]
-match = 67.7%%
-title = Bộ ga chun chần MC20201 180x200
-url = https://www.everonqb.com/bo-ga-chun-chan-mc20201-180x200.html
+match = 20.6%%
+title = Everon Quảng Bình Bộ chăn bốn mùa EPC21053 180x200
+url = https://www.everonqb.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [changagoidemsonghong.online]
 match = 18.2%%
@@ -112,9 +112,9 @@ title = Ga gối Sông Hồng basic TC BC24107
 url = https://changagoidemsonghong.online/ga-goi-song-hong-basic-bc24107.html
 
 [everonvn.com.vn]
-match = -4.2%%
-title = Bộ Everon Ep1822 - Sheep
-url = https://everonvn.com.vn/everon/623/bo-everon-ep1822
+match = -23.5%%
+title = Bảng giá bộ chăn ga gối Everon Ep1523 Hàn Quốc màu hoa ...
+url = https://everonvn.com.vn/everon/273/everon-ep-1523
 
 [staging.happynest.com.vn]
 match = -8.8%%
