--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-10 16:26:53
+lastsearch = 2024-08-10 16:57:23
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -684,7 +684,7 @@ url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bie
 [www.pnj.com.vn]
 match = -100.0%%
 title = Lắc Tay, Vòng Tay Vàng PNJ| pnj.com.vn
-url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/
+url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/?srsltid=AfmBOoo9xnusWs8BK_nVNc3nraf_QBAox3AD55ULO0QMFEdpLPgQRThc
 
 [www.tiktok.com]
 match = 27.3%%
