--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-10 13:37:03
+lastsearch = 2024-08-10 16:54:19
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -550,4 +550,9 @@ url = https://openjicareport.jica.go.jp/pdf/12086146.pdf
 match = 0.0%%
 title = vietnam iron (page 14)
 url = https://yellowpages.com.vn/categories/132610/Iron.html?page=14
+
+[www.xtmobile.vn]
+match = -181.2%%
+title = 10 phim chiếu rạp hot nhất tháng 6/2024 mà bạn không ...
+url = https://www.xtmobile.vn/phim-chieu-rap-hot-nhat-thang-6-2024
 
