--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-10 14:13:35
+lastsearch = 2024-08-10 16:59:28
 
 [www.tiktok.com]
 match = -152.9%%
@@ -17,9 +17,9 @@ title = The Bank of N.Y. Mellon v. Nev. Ass'n Serv.
 url = https://casetext.com/case/the-bank-of-ny-mellon-v-nev-assn-serv
 
 [www.reddit.com]
-match = -223.5%%
-title = HOA tried to punish us - Told us to "Stop them if we can" - ...
-url = https://www.reddit.com/r/MaliciousCompliance/comments/11n6mmx/hoa_tried_to_punish_us_told_us_to_stop_them_if_we/
+match = -88.2%%
+title = This can't be true, right? : r/fuckHOA
+url = https://www.reddit.com/r/fuckHOA/comments/1d6bhas/this_cant_be_true_right/
 
 [music.apple.com]
 match = -194.1%%
