--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thang-loi-160x200x10.html
 lastopen = 2024-06-07 01:42:38
 
 [search]
-lastsearch = 2024-08-10 12:29:11
+lastsearch = 2024-08-10 16:55:01
 
 [congtynemthangloi.com]
 match = -46.7%%
@@ -92,9 +92,9 @@ title = Có nên mua nệm cao su non Thắng Lợi không?
 url = https://vuanem.com/blog/co-nen-mua-nem-cao-su-non-thang-loi.html
 
 [khonemthangloi.com.vn]
-match = 56.7%%
-title = Nệm cao su non Thắng Lợi 1m6 x 2m x 10cm
-url = https://khonemthangloi.com.vn/san-pham/nem-cao-su-non-thang-loi-1m6-x-2m-x-10cm/
+match = 36.7%%
+title = Nệm cao su hoạt tính Thắng Lợi 1m6 x 2m x 10cm
+url = https://khonemthangloi.com.vn/san-pham/nem-cao-su-hoat-tinh-thang-loi-1m6-x-2m-x-10cm/
 
 [khonemtonghop.com]
 match = 0.0%%
