--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-10 16:27:12
+lastsearch = 2024-08-10 16:49:02
 
 [shopee.vn]
 match = -114.3%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-
 [www.lazada.vn]
 match = -85.7%%
 title = Thảm Lông Cừu Thảm Trải Giường Trải SànTtrần Bông 3 ...
-url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html
+url = https://www.lazada.vn/products/tham-long-cuu-tham-trai-giuong-trai-santtran-bong-3-lop-sieu-am-hang-loai-1du-kich-thuoc-16x2m-18x2m-i2134244460-s10053256482.html?srsltid=AfmBOoo8M5G-IcJTXPwabCubpO9YP7JXMLz2WVGa8hgFnJZQhicCPXyW
 
 [tiki.vn]
 match = -38.1%%
@@ -54,7 +54,7 @@ url = https://lanhadecor.vn/san-pham/giuong-boc-nem-lnd-16/
 [ru9.vn]
 match = -81.0%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoojOCTLLm_btsl-zjyGT7RHSMTfumXnBSCPPNZ2t9flxxMfp2Q9
 
 [edena.vn]
 match = -38.1%%
@@ -87,9 +87,9 @@ title = Đầu giường
 url = https://tonybed.com/dau-giuong/
 
 [www.sendo.vn]
-match = -14.3%%
-title = thảm trải giường [Được kiểm hàng] 23162672
-url = https://www.sendo.vn/tham-trai-giuong-duo-c-kie-m-ha-ng-23162672-117151315.html
+match = -23.8%%
+title = THẢM TRẢI GIƯỜNG [Được kiểm hàng] 23295380
+url = https://www.sendo.vn/tham-trai-giuong-duo-c-kie-m-ha-ng-23295380-117150966.html
 
 [zatafu.com]
 match = -33.3%%
@@ -195,4 +195,14 @@ url = https://thamht.vn/products/tham-len-mau-do-tuoi-sa-216
 match = 28.6%%
 title = GIƯỜNG TẦNG 16
 url = https://noithatdaimoc.vn/giuong-tang-16
+
+[famihi.vn]
+match = -104.8%%
+title = Các kích thước đệm phổ biến ở Mỹ - FamiHi Home Bedding
+url = https://famihi.vn/cac-kich-thuoc-dem-pho-bien-o-my/
+
+[luzo.vn]
+match = -85.7%%
+title = Tìm hiểu kích thước giường ngủ cho từng loại chuẩn nhất
+url = https://luzo.vn/tim-hieu-kich-thuoc-giuong-ngu-cho-tung-loai-chuan-nhat.html
 
