CI images update

--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-10 16:26:34
+lastsearch = 2024-08-10 17:48:57
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -400,4 +400,9 @@ url = https://www.ice.gov/doclib/sevis/pdf/batch_api_6.55_10162020_appf.pdf
 match = -266.7%%
 title = Candidates for the US Presidential Scholars Program
 url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
+
+[www.aacp.org]
+match = -58.3%%
+title = National Summary Report
+url = https://www.aacp.org/node/547
 
