--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-10 11:58:35
+lastsearch = 2024-08-10 17:37:59
 
 [demxanh.com]
 match = 26.1%%
 title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOoo5L4xC1dA0ZbT8krLJGN3XV9i4Vutqf1RT9C6d3wwaQLeri6eQ
+url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOopFD_kBESW0pRy-w_trOOHaGYy6U2gWwm9LYx8ZX9Vt6qD71OmJ
 
 [shopee.vn]
 match = 43.5%%
@@ -17,14 +17,14 @@ title = Chăn lông KQ đẹp loại 5kg
 url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOoqviwhiDU1wvpYM233t8vdRp2TSkiRg0MA0iAWNf27u5-gpc4zS
+match = 8.7%%
+title = Chăn KQ không sóng 5kg - Điệp Xuân
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoohGfdVqfjmbPpHQzqn03WJkM4QKwDP3fRUXS6G55V4zSH8zkju
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOooKIwYsPPEwithzcgo7mEFFSRH-jRMCng7-9PR-pDUDJ468C6bQ
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOoqSbug74q3kfqnxJCONypj6HVmJVU9K97ILq3KFnQyoY07V-0La
 
 [www.youtube.com]
 match = -56.5%%
@@ -152,8 +152,8 @@ title = SUY TỦY XƯƠNG
 url = https://bthh.org.vn/74/suy-tuy-xuong-282.html
 
 [www.staleyfarmshomeskc.com]
-match = -104.3%%
-title = News Staley Farms Private Golf Community Kansas City MO
+match = -143.5%%
+title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--b1aktidr.xn--p1ai/54138796bzlqkz-modelscomk3fe43a
 
 [nhidong.org.vn]
