--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-10 15:24:11
+lastsearch = 2024-08-10 17:46:52
 
 [tiki.vn]
 match = -133.3%%
@@ -24,7 +24,7 @@ url = https://www.lazada.vn/tag/chan-long-cuu-2m/
 [tokyolife.vn]
 match = -193.3%%
 title = Phân loại chăn lông cừu? Mua chăn lông cừu chính hãng ...
-url = https://tokyolife.vn/blog/chan-long-cuu-chinh-hang/phan-loai-chan-long-cuu-mua-chan-long-cuu-chinh-hang-o-dau
+url = https://tokyolife.vn/blog/phan-loai-chan-long-cuu/phan-loai-chan-long-cuu-mua-chan-long-cuu-chinh-hang-o-dau
 
 [trandungmart.vn]
 match = -140.0%%
@@ -42,9 +42,9 @@ title = Chăn lông cừu - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chăn/lông cừu
 
 [changadep88.vn]
-match = -80.0%%
-title = Giá Chăn lông cừu Anh Latalia và Lasante
-url = https://changadep88.vn/chan-long-cuu-anh-gia-bao-nhieu/
+match = -86.7%%
+title = Chăn lông cừu 2 lớp Lasante - Scarlet Ghi
+url = https://changadep88.vn/san-pham/chan-thu-dong-mem-mai-2-lop-lasante-scarlet/
 
 [www.demgiare.net]
 match = -153.3%%
