--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-10 15:00:55
+lastsearch = 2024-08-10 17:47:35
 
 [hoa18.com]
 match = -131.6%%
@@ -19,7 +19,7 @@ url = https://www.youtube.com/watch?v=wIGinEAhcXc
 [kallos.co]
 match = -105.3%%
 title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
-url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua?srsltid=AfmBOooQ567bq5pEDfwEBl9ByoRl2L0tJSWocMJbK4jow-WPoFlG7xLk
+url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
 
 [www.facebook.com]
 match = -47.4%%
