--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-10 06:56:12
+lastsearch = 2024-08-10 17:34:52
 
 [shopee.vn]
-match = -14.3%%
-title = Chiếu Điều Hòa COCO ( tặng kèm 2 vỏ gối ) Chiếu Làm ...
-url = https://shopee.vn/Chiếu-Điều-Hòa-COCO-(-tặng-kèm-2-vỏ-gối-)-Chiếu-Làm-Mát-Sơ-Gạo-Đầy-Đủ-Kích-Thước-Hàng-Loại-1-Không-Mùi-i.385176350.25675970266
+match = -25.0%%
+title = Chiếu mây điều hòa lót lụa cao cấp có chun bo góc giúp cố ...
+url = https://shopee.vn/Chiếu-mây-điều-hòa-lót-lụa-cao-cấp-có-chun-bo-góc-giúp-cố-định-chiếu-Chiếu-điều-hoà-sợi-mây-viền-lụa-thoáng-khí-tốt-i.472596491.13662110393
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -24,17 +24,17 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = 21.4%%
 title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOorKrFYX4Xs_m-U7GLsfh4HLWRRDshEzN82Y3OY1_-_2R6RYfzQv
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOorXGCK7oIbSf-9-NXC1XxbqHL9Vc67kRgEJPPXo18uxnp51l90Q
 
 [tiki.vn]
-match = 10.7%%
-title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu lụa điều hòa
+match = 28.6%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOoq9QmZCzt7SVatWGZy3Ym0jLhEj7cfiu-flh1ntNDObr4b3oKb_
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOopLyc_fwJNMXk-M-QfFy-Ge8jWd9DrtmgrcH4Rowtysi8GE2p-5
 
 [kyoryo.vn]
 match = -35.7%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOop0Ra_dpAr9wiP6knm-j2t9yJvzA9lrBBj5QHYRrBQPDf7xwVTo
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOopLBeutQbwnTfDJ1VF0noaYD8_wXFa69Gr9bS2dywHlmMFjXlH9
 
 [noithattana.vn]
 match = 21.4%%
