--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-10 15:21:43
+lastsearch = 2024-08-10 17:37:17
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -342,9 +342,9 @@ title = Chiếu Lác May Giá Tốt T06/2024
 url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [chieulongdinh.com.vn]
-match = -118.8%%
-title = Chiếu sọc | chiếu hiệp thành | chiếu long định
-url = http://chieulongdinh.com.vn/en/san-pham/chieu-tieu-chuan/chieu-soc.html
+match = -87.5%%
+title = Chiếu cói sọc | 1m x 2m - Chiếu Hiệp Thành
+url = http://chieulongdinh.com.vn/vi/san-pham/9/chieu-coi-soc-1m-x-2m.html
 
 [baoninhbinh.org.vn]
 match = -206.2%%
@@ -755,4 +755,9 @@ url = https://batdongsan.com.vn/ban-dat-nen-du-an-golden-hills-city
 match = -62.5%%
 title = Chuyển phát nhanh Phương Trang ...
 url = https://futaexpress.vn/chi-nhanh
+
+[httlvn.org]
+match = -193.8%%
+title = HT An Lạc Tây: Bồi Linh Thông Công Phụ nữ Khu vực 13 ...
+url = https://httlvn.org/ht-an-lac-tay-boi-linh-thong-cong-phu-nu-khu-vuc-13-nam-2024.html
 
