--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-10 16:29:01
+lastsearch = 2024-08-10 17:41:20
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -22,9 +22,9 @@ title = Chiếu cây HT 150x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [muathongminh.vn]
-match = -123.8%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
-url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
+match = -66.7%%
+title = Bộ chăn bốn mùa ga phủ vỏ gối EVERON ESM21011
+url = https://muathongminh.vn/bo-chan-bon-mua-ga-phu-vo-goi-everon-esm21011-p.1__5442067327__7352455
 
 [beecost.vn]
 match = -176.2%%
