--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-10 14:13:58
+lastsearch = 2024-08-10 17:33:31
 
 [www.tiktok.com]
-match = -168.8%%
-title = Carla We LOVE YOU!!! ❤️❤️❤️ Thank you beautiful for ...
-url = https://www.tiktok.com/@hudabeauty/video/7377293288686013739
+match = -187.5%%
+title = Loved meeting you guys!!! @Shab & Kassie 🥰🥰🥰🥰 We have ...
+url = https://www.tiktok.com/@hudabeauty/video/7381189370025364767
 
 [digitalmaine.com]
 match = -75.0%%
@@ -34,7 +34,7 @@ url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 [www.diepxuan.com]
 match = -68.8%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOoqKa13bfbISRkqInX0TxZVvrS_jZJ5iQyhqzf1ABrrfUyoTziOf
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [diepxuan.com]
 match = 6.2%%
