CI images update

--- a/images/man-khung/config.ini
+++ b/images/man-khung/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-khung.html
 lastopen = 2024-06-07 00:53:59
 
 [search]
-lastsearch = 2024-08-10 15:35:15
+lastsearch = 2024-08-10 17:59:36
 
 [mungmocmien.com]
 match = -88.9%%
@@ -24,7 +24,7 @@ url = https://mankhung.com/
 [everonvn.com.vn]
 match = -444.4%%
 title = [HOT ]Màn Khung Xếp Gọn Thông Minh Thế Hệ Mới Đẹp Nhất ...
-url = https://everonvn.com.vn/everon/781/man-khung-xep-gon-cao-cap-tien-loi?srsltid=AfmBOoqzHsRGLogUhw2blhnRGAIZlINB1eT9E1rUXE7HxC2qmVRUnPPY
+url = https://everonvn.com.vn/everon/781/man-khung-xep-gon-cao-cap-tien-loi
 
 [tiki.vn]
 match = -388.9%%
