--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-10 16:27:38
+lastsearch = 2024-08-10 17:52:01
 
 [www.reddit.com]
 match = -82.6%%
@@ -387,9 +387,9 @@ title = si"th
 url = http://ciat-library.ciat.cgiar.org/Articulos_Ciat/Digital/Report of the sixth_International_rice_testing_programa_for_latin_america_conference_report_1985.pdf
 
 [archive.newportbeachlibrary.org]
-match = -11.1%%
-title = Laserfiche WebLink
-url = https://archive.newportbeachlibrary.org/NBPL/DocView.aspx?id=1231099&dbid=0&repo=CNB
+match = -13.0%%
+title = 1983-02-11 - Orange Coast Pilot
+url = https://archive.newportbeachlibrary.org/NBPL/DocView.aspx?id=1326701&dbid=0&repo=CNB
 
 [www.skyjack.com]
 match = 8.7%%
@@ -620,4 +620,9 @@ url = https://www.riotgames.com/en/news/riot-games-mena-players
 match = -13.0%%
 title = NCIC Code Manual as of March 31, 2021
 url = https://www.oregon.gov/osp/Docs/NCICCodeManual.pdf
+
+[ecms.newportbeachca.gov]
+match = -13.0%%
+title = 1982-05-05 - Orange Coast Pilot
+url = https://ecms.newportbeachca.gov/WEB/DocView.aspx?id=1326419&dbid=0&repo=CNB
 
