--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-10 15:37:42
+lastsearch = 2024-08-10 17:54:03
 
 [everon.online]
 match = -55.6%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/top-4-bo-chan-ga-goi-everon-mau-trang-dep
 [everonvn.com.vn]
 match = -66.7%%
 title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
-url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039?srsltid=AfmBOoreDkOMII1Uzz5rXKrg4Jb7sW3nuk-c1Y83AZ_tir7q-mTtPHab
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,7 +24,7 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOophCoQ-Tav1dBDpSg0VmESjLKYb_Qhb5v5KoMBbPY6CIMG4XyJx
 
 [everonhanquoc.vn]
 match = 22.2%%
