--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-10 16:45:08
+lastsearch = 2024-08-10 17:49:55
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -44.4%%
-title = Bộ Everon EPM22063
-url = https://everon.online/products/bo-everon-epm-22063
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -43,8 +43,8 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
 
 [everonhanquoc.vn]
 match = 19.4%%
-title = Bộ chăn ga gối Everon EPM-21061
-url = https://everonhanquoc.vn/everon/12742/bo-chan-ga-goi-everon-epm-21061
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [yeshomebedding.com]
 match = 6.1%%
