--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-10 17:23:27
+lastsearch = 2024-08-10 17:50:58
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
+match = -26.1%%
+title = chiếu nhựa thái bình tiện dụng (đủ mọi kích thước)
+url = https://shopee.vn/chiếu-nhựa-thái-bình-tiện-dụng-(đủ-mọi-kích-thước)-i.1134304416.23562686178
 
 [www.facebook.com]
 match = 52.2%%
