--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-10 06:47:29
+lastsearch = 2024-08-10 17:47:32
 
 [demxanh.com]
 match = 18.2%%
@@ -13,13 +13,13 @@ url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 3
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=3
+title = Thảm ghế thảm giường - Trang 7
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-asc&page=7
 
 [decoviet.vn]
-match = -50.0%%
-title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
-url = https://decoviet.vn/tham-lot-ghe-sofa/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
