CI images update

--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-08-10 16:21:06
+lastsearch = 2024-08-10 18:25:25
 
 [shopee.vn]
 match = -146.7%%
@@ -115,4 +115,9 @@ url = https://vseat.vn/san-pham/ghe-da-van-phong-gw-2103b/
 match = -160.0%%
 title = Ghế Đá Đại Long 56 - Ghế Đá Hồ Chí Minh 0911162344
 url = https://ghedahochiminh.com/ghe-da/ghe-da-dai-long-56/
+
+[en.wikipedia.org]
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Bảo_Đại
 
