--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-10 17:23:48
+lastsearch = 2024-08-10 18:22:22
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -94.1%%
-title = Epithelial sodium channel (ENaC) family
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4756657/
+match = -200.0%%
+title = Discovery of a novel third-generation EGFR inhibitor and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
 match = -200.0%%
@@ -117,9 +117,9 @@ title = external-link - Kvaser
 url = https://www.kvaser.cn/en/external-link/?url=https://xn----7sbgjxfdsjc1aeee3e.xn--p1ai/23856179zfe43a
 
 [usa.yamaha.com]
-match = -58.8%%
-title = CX-A5200 Owner's Manual - Yamaha
-url = https://usa.yamaha.com/files/download/other_assets/8/1215228/web_AV17-0237_CX-A5200_om_UCABGLVF_En_D0.pdf
+match = -117.6%%
+title = RX-A3080/RX-A2080 Owner's Manual - Yamaha
+url = https://usa.yamaha.com/files/download/other_assets/0/1197630/web_AV17-0221_RX-A3080_2080_om_UCRABGLF_En_D0.pdf
 
 [www.e-cmh.org]
 match = -205.9%%
