--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-08-10 16:36:17
+lastsearch = 2024-08-10 18:18:09
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -94,7 +94,7 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOoqh9-XT4-IbsKgMmY9OIatvxU1ZzZqMjBBZI8_ZV_MF3MEu-j5X
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOoofZeOjS4KM1vqiuG9OicG2UHnVLUg-cFdAvtNrMVfFEdH5p-Tn
 
 [huongtruc.com]
 match = -213.3%%
@@ -119,7 +119,7 @@ url = https://www.htv.com.vn/lich-phat-song
 [congnghehoangtien.com]
 match = -133.3%%
 title = Đèn Led Năng Lượng Mặt Trời Sân Vườn HT-SL10
-url = https://congnghehoangtien.com/san-pham/den-led-nang-luong-mat-troi-san-vuon-ht-sl10/
+url = https://congnghehoangtien.com/san-pham/den-led-nang-luong-mat-troi-san-vuon-ht-sl10/?srsltid=AfmBOoongtV_vBO7xJJGiZA-MzuqO4jzbUMoo3eSImHwiAo929xFc-ym
 
 [www.otosaigon.com]
 match = -86.7%%
