--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-10 17:34:12
+lastsearch = 2024-08-10 18:19:10
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -180.0%%
+title = MOVSA - Melbourne Overseas Vietnamese Student ...
+url = https://www.facebook.com/movsa.vn/posts/-𝐃𝐄𝐏𝐀𝐑𝐓𝐔𝐑𝐄-𝐁𝐑𝐈𝐄𝐅𝐈𝐍𝐆-𝐊𝐈𝐂𝐊-𝐒𝐓𝐀𝐑𝐓-️𝐌𝐎𝐕𝐒𝐀-𝐱-𝐒𝐄𝐓-𝐄𝐃𝐔𝐂𝐀𝐓𝐈𝐎𝐍___________________________/754660916690225/
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -87,9 +87,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [m.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://m.facebook.com/phimhaygiare/?locale=ru_RU
+match = -33.3%%
+title = tìm trẻ lạc d2 NGT Long Biên✌️✌️✌️✌️✌️
+url = https://m.facebook.com/groups/HocSinhHN/posts/1619809158664939/
 
 [www.youtube.com]
 match = -213.3%%
