--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-10 16:57:23
+lastsearch = 2024-08-10 18:27:09
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -242,9 +242,9 @@ title = Xét xử lưu động vụ án tàng trữ trái phép chất ma túy
 url = https://congan.kontum.gov.vn/an-ninh-trat-tu/toi-pham-va-vi-pham-phap-luat/xet-xu-luu-dong-vu-an-tang-tru-trai-phep-chat-ma-tuy.html
 
 [vnexpress.net]
-match = -68.8%%
-title = Cô gái 'cưa đổ' đồng nghiệp của bố
-url = https://vnexpress.net/co-gai-cua-do-dong-nghiep-cua-bo-4772666.html
+match = -131.2%%
+title = CEO GAM Esports thử thách 21km tại VM Nha Trang
+url = https://vnexpress.net/ceo-gam-esports-thu-thach-21km-tai-vm-nha-trang-4780006.html
 
 [canbangdongclc.com]
 match = -75.0%%
@@ -684,7 +684,7 @@ url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bie
 [www.pnj.com.vn]
 match = -100.0%%
 title = Lắc Tay, Vòng Tay Vàng PNJ| pnj.com.vn
-url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/?srsltid=AfmBOoo9xnusWs8BK_nVNc3nraf_QBAox3AD55ULO0QMFEdpLPgQRThc
+url = https://www.pnj.com.vn/lac-vong-tay/lac-vong-tay-vang/?srsltid=AfmBOorqvOc7WB71rxUEh-SXmdo9N5KXLrfy5KBcOeoEf2MhQryLnSpc
 
 [www.tiktok.com]
 match = 27.3%%
