--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-10 14:14:58
+lastsearch = 2024-08-10 18:11:49
 
 [www.diepxuan.com]
 match = -14.3%%
@@ -28,8 +28,8 @@ url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpagei
 
 [demxanh.com]
 match = -3.6%%
-title = Ga gối Sông Hồng Basic cotton BC24101
-url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc24101.html
+title = Bộ ga gối chun chần Misuko Tencel Rio 02
+url = https://demxanh.com/bo-ga-goi-chun-chan-misuko-tencel-rio-02.html
 
 [stevematuro.com]
 match = -39.3%%
