--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-10 17:27:01
+lastsearch = 2024-08-10 18:19:32
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.youtube.com]
@@ -194,7 +194,7 @@ url = https://max.adobe.com/
 [www.uniqlo.com]
 match = -233.3%%
 title = Women's, Men's and Kids' Clothing & Accessories | UNIQLO US
-url = https://www.uniqlo.com/us/en/
+url = https://www.uniqlo.com/us/en/?srsltid=AfmBOoqeQS5Ksl30efFZtNbxzl9gP1ZKdHWQ20n6oDreEbyWS4SsoSGy
 
 [facebookuserprivacysettlement.com]
 match = -100.0%%
@@ -713,7 +713,7 @@ url = https://www.legodiscoverycenter.com/washington-dc/whats-inside/events/lego
 
 [publicaccess.courts.state.mn.us]
 match = -166.7%%
-title = Minnesota Court Records Online (MCRO): Home Page
+title = Home Page - Minnesota Court Records Online (MCRO)
 url = https://publicaccess.courts.state.mn.us/
 
 [www.g-star.com]
