--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-10 17:40:59
+lastsearch = 2024-08-10 18:11:28
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Expect the unexpected - It's the NEM after all
 url = https://wattclarity.com.au/articles/2022/02/expect-the-unexpected-its-the-nem-after-all/
 
 [books.google.com]
-match = -95.2%%
-title = A First Latin Book - Page 249 - Google Books Result
-url = https://books.google.com/books?id=FDr_DwAAQBAJ&pg=PA249&lpg=PA249&dq=nem+di+a+mon+9f+16+re&source=bl&ots=-2GkFcYthQ&sig=ACfU3U2ZRkZdVFO2z3bMBqDMI20mUATy4Q&hl=en&sa=X&ved=2ahUKEwiUwPypnuqHAxX7D1kFHZnmA1sQ6AF6BAgfEAM
+match = -147.6%%
+title = Lippincott's Gazetteer of the World: A Complete Pronouncing ...
+url = https://books.google.com/books?id=R9zPRFeo8ZMC&pg=PA1450&lpg=PA1450&dq=nem+di+a+mon+9f+16+re&source=bl&ots=3eFJwDK83K&sig=ACfU3U2jJQvvP-e_LT9zEfwyWzkk26ggpQ&hl=en&sa=X&ved=2ahUKEwjS15qSpeqHAxUUFVkFHQApGO0Q6AF6BAgdEAM
 
 [www.diepxuan.com]
 match = -81.0%%
