CI images update

--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-08-10 18:16:22
 [www.diepxuan.com]
 match = 14.3%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOoo8xTiEzhgjvqqMGRmww2F0GVZidAe7OZDttQebQQPaf-RxYmD2
 
 [www.youtube.com]
 match = -128.6%%
