--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-10 16:46:31
+lastsearch = 2024-08-10 18:38:15
 
 [vinatools.com]
 match = -206.7%%
 title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/?srsltid=AfmBOoqV8tiAkbLJ5hk4gl_vzuFexSPCrU_oCL17Q6CqPvQhWVlDktWg
 
 [www.vietnamairport.vn]
 match = -240.0%%
@@ -84,7 +84,7 @@ url = https://maiphuong.vn/products/o-cung-de-ban-lacie-d2-pro-16tb-usb-c-srs-st
 [www.instagram.com]
 match = -44.4%%
 title = Instagram
-url = https://www.instagram.com/p/CpwSVeuPb9W/
+url = https://www.instagram.com/theb6.hanoi/p/C8Ty_9_tcCJ/
 
 [play.google.com]
 match = -193.3%%
