--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-10 12:30:52
+lastsearch = 2024-08-10 18:33:47
 
 [everonvn.com.vn]
 match = 15.8%%
 title = Bộ Everon Epm-19064
-url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOoplLtlm9ADZgXKFu0qZaTDqk5-MSqi1hk_OXr8y1oe7q9xJROc7
 
 [everon.com.vn]
 match = 5.3%%
 title = BỘ EVERON EPC 19043
-url = https://everon.com.vn/epc-19043/
+url = https://everon.com.vn/epc-19043/?srsltid=AfmBOoor4nJZt7LEhYNmVavws-qh9hsd7zeHnx_vd3kTKm_fAxVvRwnL
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOooGYI-JrIkRp7vkjZAQ6oTybofl9hXyCYKLTyQkiJ1YkoTz2X1_
 
 [shopee.vn]
 match = -48.1%%
