--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-10 15:37:21
+lastsearch = 2024-08-10 18:32:06
 
 [hanvico.com.vn]
 match = 47.4%%
@@ -12,9 +12,9 @@ title = Bộ ga chun chần KS8
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-chan-ks8/
 
 [www.diepxuan.com]
-match = -14.3%%
-title = Bộ chăn ga gối màu xoa tin 14 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOorHVKSMPC0bVo5fSn6MRdufuhrPG61WIk2llCxEBvTgen-8k_7_
+match = -4.8%%
+title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
 match = -57.1%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOoqca4rJIi_LWFbgMj2kN2mCPpI4Cxce5C-EM2PU7W1nt0iOUKI-
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -33.3%%
 title = Bộ ga chun Velina V14 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v14?srsltid=AfmBOopaB4Pbgmym06zxIhr1fz7koRwxBoUCdd3T3j879pAGPgEBNd4Q
+url = https://foreverbedding.net/bo-ga-chun-velina-v14
 
 [changmibedding.com]
 match = -33.3%%
