--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-10 17:37:59
+lastsearch = 2024-08-10 18:25:07
 
 [demxanh.com]
 match = 26.1%%
 title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOopFD_kBESW0pRy-w_trOOHaGYy6U2gWwm9LYx8ZX9Vt6qD71OmJ
+url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOopQvC7r_Gzy16AobOoIpub8qWomYIYy5Lnc-OSRWAvoaS8J9L8R
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 8.7%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoohGfdVqfjmbPpHQzqn03WJkM4QKwDP3fRUXS6G55V4zSH8zkju
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOopSJDQe48vpJqFgszKqF9rN4jnnIkL972TLtsm9VDcyhh21OcWw
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOoqSbug74q3kfqnxJCONypj6HVmJVU9K97ILq3KFnQyoY07V-0La
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOooUyhTtXz6Y_OwCiipczvCJoesI4tpAUg3ORvOK8tNvXNILbEfQ
 
 [www.youtube.com]
 match = -56.5%%
@@ -152,8 +152,8 @@ title = SUY TỦY XƯƠNG
 url = https://bthh.org.vn/74/suy-tuy-xuong-282.html
 
 [www.staleyfarmshomeskc.com]
-match = -143.5%%
-title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
+match = -104.3%%
+title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--b1aktidr.xn--p1ai/54138796bzlqkz-modelscomk3fe43a
 
 [nhidong.org.vn]
