--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-10 13:35:18
+lastsearch = 2024-08-10 18:40:22
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chan cocoo - Freelance (Self employed)
 url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -115.4%%
-title = Coco Chan (@cocopops072) - Instagram
-url = https://www.instagram.com/cocopops072/?hl=en
+match = -38.5%%
+title = Coco Chan (@nataliecocochan)
+url = https://www.instagram.com/nataliecocochan/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
