--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-10 16:33:33
+lastsearch = 2024-08-10 18:30:46
 
 [helloviettravel.com]
 match = -187.5%%
-title = Tour du lịch xuyên Việt 21 ngày - Hello Việt Nam Travel
-url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
+title = Tour xuyên Việt 18 ngày 17 đêm - Hello Việt Nam Travel
+url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
 
 [saovangtravel.com]
 match = -50.0%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -143.8%%
-title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
-url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
+match = -125.0%%
+title = 18 tầng địa ngục ghê rợn ở Khu du lịch Suối Tiên
+url = https://www.youtube.com/watch?v=hah_1r1UOIg
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -159,7 +159,7 @@ url = https://momo.vn/blog/dia-diem-du-lich-nha-trang-c101dt870
 [vietmytravel.com]
 match = -187.5%%
 title = Du Lịch Mỹ Kết Hợp Thăm Thân Nhân 2024 chỉ với 39tr900
-url = https://vietmytravel.com/tour/tour-du-lich-my-tham-than/?srsltid=AfmBOootFQc1UbMSHB0DiGG4B0d1fVOarDt6PyWx746gDKiuRh98Vx2c
+url = https://vietmytravel.com/tour/tour-du-lich-my-tham-than/
 
 [visana.vn]
 match = -212.5%%
