--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-10 11:54:55
+lastsearch = 2024-08-10 18:36:49
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOoqmx0hHs7gSkU_FOvE1dCFhH6MzO1NLNRPNOkf7XiRSyKqJPybm
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 
 [demxanh.com]
 match = -28.6%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
 url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 
 [www.lazada.vn]
-match = -81.0%%
-title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOop8CDpcuHqj10TG-Dx8lMrUAHJFFqvF7JvVyfnEnRhg0QuewauV
+match = -119.0%%
+title = [SIZE LỚN 1.8x2m] Chiếu điều hoà sợi mây chiếu ngủ văn ...
+url = https://www.lazada.vn/products/size-lon-18x2m-chieu-dieu-hoa-soi-may-chieu-ngu-van-phong-chat-lieu-soi-may-tong-hop-thoang-mat-chieu-ngu-van-phong-i1758917727.html
 
 [tiki.vn]
 match = -42.9%%
@@ -412,9 +412,9 @@ title = Khai trương trụ sở mới Phòng giao dịch Ea Kar của ...
 url = https://baodaklak.vn/kinh-te/tai-chinh-ngan-hang/202407/khai-truong-tru-so-moi-phong-giao-dich-ea-kar-cua-vietcombank-dak-lak-63215db/
 
 [www.facebook.com]
-match = -52.4%%
-title = 3 CỰC HOT CHO ĐÔI TÌNH NHÂN <3 Chương ...
-url = https://www.facebook.com/photo.php?fbid=955228767979362&id=372534489582129&set=a.382649838570594&locale=pt_PT
+match = -95.2%%
+title = CÓ GÌ HOT TRONG PHIÊN BẢN 0.15.5 VÀ ROYALE PASS ...
+url = https://www.facebook.com/photo.php?fbid=448529505847823&id=251269595573816&set=a.252830558751053&locale=he_IL
 
 [haiquanonline.com.vn]
 match = -133.3%%
