--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-17 21:12:12
 lastsearch = 2024-08-10 18:20:13
 
 [www.diepxuan.com]
-match = 36.4%%
-title = Điệp Xuân Thảm giường Bode 140x190
-url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
+match = 40.9%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOopC8ecYy7pWkmXGCiv-5GebQGvgqSCYn1GpJc7hjUxIh9SgORLj
 
 [tiki.vn]
 match = -36.4%%
@@ -49,7 +49,7 @@ url = https://blanc.vn/tham-trai-san
 [demxanh.com]
 match = -86.4%%
 title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html
+url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html?srsltid=AfmBOoqtBm7gG9TS1ko4Rc-aoAIdSGScPUgEBdi9VlFfydeybxgXkfT-
 
 [www.kymdan.com]
 match = 15.8%%
@@ -82,8 +82,8 @@ title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
 url = https://www.airbnb.com.vn/rooms/1258488
 
 [comehome.com.vn]
-match = -109.1%%
-title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ cho bé ...
+match = -77.3%%
+title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
@@ -157,9 +157,9 @@ title = Chăn drap nệm giường
 url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html
 
 [jysk.vn]
-match = -90.9%%
-title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp
-url = https://jysk.vn/ga-chun-140x200cm
+match = -118.2%%
+title = Seersucker duvet cover set ALICIA 200x220 multi - JYSK.vn
+url = https://jysk.vn/en-US/seersucker-duvet-cover-set-alicia-200x220-multi?srsltid=AfmBOoq1b1O76Sj0o2_WHQZlbbGZtsy74diDHBpZFfuLn7tp5RDqfJXr
 
 [noithatcaco.vn]
 match = -109.1%%
