CI images update

--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-10 18:20:13
+lastsearch = 2024-08-10 18:50:45
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOopC8ecYy7pWkmXGCiv-5GebQGvgqSCYn1GpJc7hjUxIh9SgORLj
+match = 36.4%%
+title = Điệp Xuân Thảm giường Bode 140x190
+url = https://www.diepxuan.com/tham-giuong-bode-140x190.html
 
 [tiki.vn]
 match = -36.4%%
@@ -49,7 +49,7 @@ url = https://blanc.vn/tham-trai-san
 [demxanh.com]
 match = -86.4%%
 title = Đệm bông ép 1m4 (1m4x1m9 và 1m4x2m) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html?srsltid=AfmBOoqtBm7gG9TS1ko4Rc-aoAIdSGScPUgEBdi9VlFfydeybxgXkfT-
+url = https://demxanh.com/dem-bong-ep-1m4x2m-140x200cm-gia-bao-nhieu.html
 
 [www.kymdan.com]
 match = 15.8%%
@@ -157,9 +157,9 @@ title = Chăn drap nệm giường
 url = https://dongagroup.vn/noi-that-phong-ngu/chan-drap-nem-giuong-189.html
 
 [jysk.vn]
-match = -118.2%%
-title = Seersucker duvet cover set ALICIA 200x220 multi - JYSK.vn
-url = https://jysk.vn/en-US/seersucker-duvet-cover-set-alicia-200x220-multi?srsltid=AfmBOoq1b1O76Sj0o2_WHQZlbbGZtsy74diDHBpZFfuLn7tp5RDqfJXr
+match = -90.9%%
+title = Ga Chun 140 x 200 cm Bọc Nệm Cotton Satin Cao Cấp
+url = https://jysk.vn/ga-chun-140x200cm
 
 [noithatcaco.vn]
 match = -109.1%%
