--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-10 17:17:54
+lastsearch = 2024-08-10 18:54:13
 
 [demxanh.com]
 match = 3.4%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoocL157ebNu0nLxxKHEQWspj67HfdZoMoha8tLnFwHAoMMFH6rh
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [entershopping.vn]
 match = -13.8%%
@@ -49,7 +49,7 @@ url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 [thegioidemonline.com]
 match = 37.9%%
 title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html?srsltid=AfmBOooWN_lfC0TLVV6oW2aLYJ-ztSM_eKfrHHL8S5I1sfA4A81-sGRC
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [shopee.vn]
 match = -20.7%%
