--- a/images/chieu-dieu-hoa-lua-120x190/config.ini
+++ b/images/chieu-dieu-hoa-lua-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-120x190.html
 lastopen = 2024-08-08 20:39:18
 
 [search]
-lastsearch = 2024-08-10 16:57:02
+lastsearch = 2024-08-10 18:48:43
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOorvAVDkGc1GNqPyyKolspLdVN-YvTpoc3votTef3LeVU3tTBCQm
 
 [thegioidemviet.vn]
 match = -19.2%%
@@ -19,12 +19,12 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [thegioidemonline.com]
 match = 34.6%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
+url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html?srsltid=AfmBOooXx-CFEy4qUcosnlca-zBGoYN8eyd3APBbpd4xPbyesbz8ZN-S
 
 [shopee.vn]
-match = 53.8%%
-title = CHIẾU ĐIỀU HÒA kích thước 120x190 cm
-url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-kích-thước-120x190-cm-i.63828245.1164568361
+match = -7.7%%
+title = chiếu điều hoà giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [thegioichieutruc.com]
 match = -65.4%%
