--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-10 18:38:15
+lastsearch = 2024-08-10 18:47:40
 
 [vinatools.com]
 match = -206.7%%
 title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/?srsltid=AfmBOoqV8tiAkbLJ5hk4gl_vzuFexSPCrU_oCL17Q6CqPvQhWVlDktWg
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/
 
 [www.vietnamairport.vn]
 match = -240.0%%
