--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-10 13:01:17
+lastsearch = 2024-08-10 18:59:23
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -38,8 +38,8 @@ url = https://moon.vn/hoi-dap/mot-con-lac-don-co-chieu-dai-l-duoc-treo-duoi-gam-
 
 [vietjack.com]
 match = -193.8%%
-title = Cách tính chu kì, tần số của Con lắc lò xo (hay, chi tiết)
-url = https://vietjack.com/vat-ly-lop-12/tinh-chu-ki-tan-so-cua-con-lac-lo-xo.jsp
+title = Cách tìm năng lượng dao động, tìm lực căng dây của con ...
+url = https://vietjack.com/vat-ly-lop-12/nang-luong-con-lac-don-va-luc-cang-day.jsp
 
 [olm.vn]
 match = -187.5%%
@@ -82,9 +82,9 @@ title = Khăn rối mặt gấu kèm lục lạc, gặm nướu (Xanh dương)
 url = https://concung.com/do-choi-em-be/khan-roi-mat-gau-kem-luc-lac-gam-nuou-xanh-duong-55669.html
 
 [shopee.vn]
-match = -18.8%%
-title = Chiếu lác thiên nhiên : 1m6 .1m8
-url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
+match = -150.0%%
+title = Bộ Đồ Chơi Xúc Xắc Cho Bé Sơ Sinh Lục Lạc Gặm Nướu ...
+url = https://shopee.vn/Bộ-Đồ-Chơi-Xúc-Xắc-Cho-Bé-Sơ-Sinh-Lục-Lạc-Gặm-Nướu-Hộp-Gấu-Cao-Cấp-10-Món-XX11-i.18044339.8963847684
 
 [www.conggiao.org]
 match = -68.8%%
@@ -314,12 +314,12 @@ url = https://www.aeon.com.vn/
 [www.lazada.vn]
 match = -143.8%%
 title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOorFg9wPCe2r7_vG2TAnpchb973opIJey7gHP_9onHRApYXg9VYZ
+url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
 
 [yato.vn]
 match = -175.0%%
 title = Bộ Cờ Lê Đảo Chiều Lắc Léo 12 Chi Tiết 8-19mm Yato YT ...
-url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885?srsltid=AfmBOopMd9L8ZXQq3pzX5lIWcK-4yWUHLwarJPcITV4pvSc1avoCjTVU
+url = https://yato.vn/bo-co-le-vong-mieng-dao-chieu-12-chi-tiet-8-19mm-yato-yt-16968-p13885
 
 [baothaibinh.com.vn]
 match = -200.0%%
