--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-08-10 13:48:49
+lastsearch = 2024-08-10 18:59:02
 
 [demxanh.com]
 match = -17.6%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoq2SEqAWtPgWuVJYkVJkeNYMz2ZPJlG47v44elspf0lvDnfr5mr
 
 [dem24h.vn]
 match = -29.4%%
