--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-10 18:26:07
+lastsearch = 2024-08-10 18:58:41
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOoqEKKIqoagwK6CryY6eVzL2wYVryfVSKdmtUywePkVHLFps5M-E
 
 [www.everonqb.com]
 match = -9.5%%
@@ -19,7 +19,7 @@ url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 [www.diepxuan.com]
 match = -19.0%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOopDwW9x3QhF78tx-uuFDxo19So_dVqTifdUeXeg7qrnBgRCzELQ
 
 [muathongminh.vn]
 match = -66.7%%
