CI images update

--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-10 17:52:22
+lastsearch = 2024-08-10 19:30:22
 
 [www.muji.com]
 match = -33.3%%
@@ -102,9 +102,9 @@ title = Muji Rice Bran Pickle
 url = https://www.tiktok.com/discover/muji-rice-bran-pickle
 
 [www.lazada.vn]
-match = -62.5%%
-title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+match = -57.1%%
+title = Chăn Tuyết Muji Giá Tốt T08/2024
+url = https://www.lazada.vn/tag/chan-tuyet-muji/
 
 [sugoimart.com]
 match = -257.1%%
