--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-10 15:59:54
+lastsearch = 2024-08-10 19:25:30
 
 [burningman.org]
 match = -60.0%%
@@ -893,7 +893,7 @@ url = https://californiacourtrecords.us/criminal-court-records/inmate/
 
 [publicaccess.courts.state.mn.us]
 match = -166.7%%
-title = Minnesota Court Records Online (MCRO): Home Page
+title = Home Page - Minnesota Court Records Online (MCRO)
 url = https://publicaccess.courts.state.mn.us/
 
 [www.ussoccer.com]
