--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-08-10 18:57:16
+lastsearch = 2024-08-10 19:27:55
 
 [demxanh.com]
 match = 6.9%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOoq56_8jwNAc8GaqNRHSyokwKJsgSqfl8cvLAneuCJZ4bFVPhPvq
 
 [entershopping.vn]
 match = -13.8%%
@@ -34,7 +34,7 @@ url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 [thegioidemonline.com]
 match = 37.9%%
 title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html?srsltid=AfmBOooHMgxryOAWeQFaBIatAMBJgoZEB3ZPu-cLgwG5P_yWrLnOV-J8
 
 [khodem.vn]
 match = 55.2%%
