--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-10 16:55:40
+lastsearch = 2024-08-10 19:27:34
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -105.9%%
-title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdohic4lV&sig=ACfU3U1h9Dt7gOUJo9s51KRnQT9Y63b8cQ&hl=en&sa=X&ved=2ahUKEwisybC-3OmHAxXeEkQIHfQFMaoQ6AF6BAgmEAM
+match = -217.6%%
+title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+14&source=bl&ots=2iloQDu32I&sig=ACfU3U2ZRZnU43QrEFiKqTGcw4Y_VdI_MA&hl=en&sa=X&ved=2ahUKEwjWtbqTtuqHAxVsF1kFHfUFBVcQ6AF6BAgcEAM
 
 [www.house.gov]
 match = 11.8%%
