--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-10 18:49:04
+lastsearch = 2024-08-10 19:32:44
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -100.0%%
-title = The Steady Market | 𝐍𝐄𝐌 𝐑𝐀́𝐍 𝐒𝐈𝐄̂𝐔 𝐍𝐆𝐎𝐍 𝐓𝐔̛̀ 𝐓𝐇𝐄 ...
-url = https://www.instagram.com/p/C-C4vjXPBHT/
+match = -144.4%%
+title = Thùy Ngân (@huuloc861) • Instagram photos and videos
+url = https://www.instagram.com/huuloc861/
 
 [www.facebook.com]
 match = 22.2%%
@@ -27,9 +27,9 @@ title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
 url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
 
 [www.tiktok.com]
-match = -144.4%%
-title = Chắc nhiều bạn đã nghe đến Nem Chua chị Hạnh. Phải ...
-url = https://www.tiktok.com/@ngdangdung/video/7237496309215726853
+match = -105.6%%
+title = Corpus Saponem Aqua Catino Purgat Nitro Recipe
+url = https://www.tiktok.com/discover/corpus-saponem-aqua-catino-purgat-nitro-recipe
 
 [www.youtube.com]
 match = -122.2%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -94.4%%
+title = Người Việt Bolsa/Orange County | ❤️‍🔥❤️‍🔥NEM CHUA ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2893614240788940/
 
 [www.proz.com]
 match = -183.3%%
@@ -200,4 +200,9 @@ url = https://cooking.nytimes.com/recipes/1019032-nem-nuong-vietnamese-sausage
 match = 0.0%%
 title = 
 url = https://www.labmanager.com/how-a-raw-pork-snack-could-help-us-keep-food-fresh-naturally-26023
+
+[vi.wikipedia.org]
+match = -38.9%%
+title = Món cuốn – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Món_cuốn
 
