--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-10 15:33:55
+lastsearch = 2024-08-10 19:31:44
 
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 180x200
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html?srsltid=AfmBOoojp25xtQD428-LWRdrMKLJX_AB0s0vGMtlwmjNBqyXL0piivOD
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOorEJUBWBjK19zh27SLcK56oN8niIuTJ4KUsPYwfCxZb4hTw1-5w
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
-match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOorKXTHLvHTXtrBBY7N5K3_fsMmdS_vptxiBBv7s44C0JrUE-sr5
+match = -68.2%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -67,8 +67,8 @@ title = Bed frame VEDDE 180x200 wild oak - JYSK.vn
 url = https://jysk.vn/en-US/bed-frame-vedde-180x200-wild-oak
 
 [decosy.com]
-match = 4.5%%
-title = Furniture & Decoration
+match = -50.0%%
+title = Furniture & Decoration - Decosy Vietnam
 url = https://decosy.com/vi_VN/shop/category/phong-ngu-giuong-1167
 
 [vn.my-best.com]
