--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-08-10 18:10:25
+lastsearch = 2024-08-10 19:38:22
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoo_dVOA4MbmZTpPPXa4ayWu1AmxO8JIEly85URTnVk4nuSuDoP0
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.noithatpassion.com]
 match = -52.2%%
