--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-10 15:17:59
+lastsearch = 2024-08-10 19:35:13
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -37,9 +37,9 @@ title = Tūī
 url = https://davidtrubridge.com/au/lighting/tui
 
 [www.linkedin.com]
-match = 10.0%%
-title = TUI's Post
-url = https://www.linkedin.com/posts/tuigroup_???-???-????-????-the-activity-7169328748431925248-2RWQ
+match = -200.0%%
+title = TUI
+url = https://www.linkedin.com/company/tuigroup
 
 [www.diepxuan.com]
 match = -133.3%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = 36.4%%
+title = tui sitemap
+url = https://www.tui.co.uk/sitemap
 
 [maritime-executive.com]
 match = -316.7%%
