CI images update

--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-10 18:50:05
+lastsearch = 2024-08-10 19:57:55
 
 [us.misumi-ec.com]
 match = -350.0%%
@@ -87,9 +87,9 @@ title = Collective Bargaining Agreement
 url = https://www.usf.edu/hr/documents/employment-resources/employee-labor-relations/cba-2022-2025-usf-bot-and-gau.pdf
 
 [www.instagram.com]
-match = -100.0%%
-title = Cornell KASA (@cornellkasa)
-url = https://www.instagram.com/cornellkasa/?hl=en
+match = -300.0%%
+title = NYU Admissions (@meetnyu) • Instagram photos and videos
+url = https://www.instagram.com/meetnyu/?hl=en
 
 [www.billheadfuneralhome.com]
 match = -250.0%%
@@ -405,4 +405,9 @@ url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 match = -58.3%%
 title = National Summary Report
 url = https://www.aacp.org/node/547
+
+[www.cia.gov]
+match = -25.0%%
+title = no foreign dissem
+url = https://www.cia.gov/readingroom/docs/CIA-RDP78B04560A005500010028-8.pdf
 
