--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-10 18:31:47
+lastsearch = 2024-08-10 20:07:04
 
 [www.diepxuan.com]
-match = 5.9%%
-title = Điệp Xuân Ruột gối kê Korea 45x65
-url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
+match = -5.9%%
+title = Ruột gối kê Korea 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html?srsltid=AfmBOopMyWKMewUagmnvvnSdzufU8ptcntnO6QF6IZKBY9_UQcIfmp4Z
 
 [entershopping.vn]
 match = -123.5%%
@@ -17,9 +17,9 @@ title = Ruột gối ép Hàn Quốc Korea , ruot-goi-ep-han-quoc-korea
 url = https://entershopping.vn/ruot-goi-ep-han-quoc-korea.html
 
 [www.detmaykimthanh.com]
-match = 52.9%%
-title = Ruột gối Standard
-url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-129.html
+match = 5.9%%
+title = Ruột gối Microfiber Korea Virgin
+url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
 match = 64.7%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/Ruột-gối-ép-hơi-Korea-i.86050283.1557277406
 [demxanh.com]
 match = -100.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorEqe6ZaaS2cO1WfgC49JLJEaxZ0Ci0pWhUO1RVgAjs7D_L9pvP
 
 [everonkorea.com]
 match = -100.0%%
@@ -54,7 +54,7 @@ url = https://www.lazada.vn/products/goi-ngu-mosam-korea-ruot-kem-vo-goi-35x55-c
 [www.hotdeal.vn]
 match = -111.8%%
 title = Combo 2 Ruột Gối Bông Ép Korea Hút Chân Không Hà Nội
-url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html
+url = https://www.hotdeal.vn/ha-noi/nha-cua-doi-song/combo-2-ruot-goi-bong-ep-korea-hut-chan-khong-174420.html?srsltid=AfmBOopLuZJZGCRKv3_cXJL9Q71OHCn6sgq3FmwDKbb-h42nPNIvjYcp
 
 [dienmaytinphong.com]
 match = -70.6%%
