--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-10 18:23:01
+lastsearch = 2024-08-10 20:10:50
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -89,7 +89,7 @@ url = https://tiki.vn/ruot-goi-ruot-chan/c6724
 [ru9.vn]
 match = -171.4%%
 title = Kinh Nghiệm Nên Mua Ruột Gối Loại Nào Để Ngủ Ngon
-url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao?srsltid=AfmBOoqSnSpkEa5Uq-uwausLSbV125A6Vbm0yzqytA1CZA-peKOlxzGB
+url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao
 
 [www.nguonhangsigiare.com.vn]
 match = -235.7%%
