--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-10 18:26:28
+lastsearch = 2024-08-10 20:03:33
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
 match = 4.3%%
-title = Bộ sản phẩm SH_BC23 082
-url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-082
+title = Bộ sản phẩm SH_BC23 072
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-73
 
 [everon.online]
 match = 50.0%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022?srsltid=AfmBOorUskZr0T9B_PhOgLWVYAibdhIIIk5SIV9AaAKy13Qtv0WtXg6G
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
