--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-08-10 19:32:04
+lastsearch = 2024-08-10 19:56:33
 
 [www.lazada.vn]
-match = -60.9%%
-title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html?srsltid=AfmBOoqTNvCpWJkReD9sXWCzb_htrhDJCGP_UY1KZetpPJH6IGgPEymt
+match = -17.4%%
+title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOorUSLHZdDysPNsL2MflUYwr66ipgex-u3dHuxokb-iYyAl1q0-z
 
 [www.facebook.com]
 match = 52.2%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = -69.6%%
-title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
-url = https://www.sendo.vn/chieu-coi-thai-binh.htm
+match = 34.8%%
+title = Chiếu nhựa thái bình 1m x 1m9 - chieu
+url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
 
 [shopee.vn]
 match = 4.3%%
@@ -74,7 +74,7 @@ url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 [www.diepxuan.com]
 match = 13.0%%
 title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html?srsltid=AfmBOop1hat_-VUv_6jJ_v5KicydjqMhtAH7QthPn5fOfDGIisX57ZMa
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html?srsltid=AfmBOopJNb2BGPZT_j_y0EEiaCgfD5H6M1wvr0XGxrDb_z78LiHI-jju
 
 [h5.lazada.vn]
 match = -17.4%%
