--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-10 18:48:01
+lastsearch = 2024-08-10 20:04:16
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -19,7 +19,7 @@ url = https://nemgiakho.com/mua-nem-everon-180x200x15-gia-re-o-dau.html
 [everon.com.vn]
 match = 17.9%%
 title = Đệm Bông ép Extrafoam EVERON
-url = https://everon.com.vn/dem-bong-ep-extrafoam-everon/?srsltid=AfmBOorflKXfhojg8FjUhPcaiOyWuV_U6WdKKU-a-nwj_11Xi2NHWiN3
+url = https://everon.com.vn/dem-bong-ep-extrafoam-everon/
 
 [nemeveron.com.vn]
 match = 42.9%%
@@ -62,9 +62,9 @@ title = Nệm bông ép gấp 3 Padding Everon
 url = https://khonemtonghop.com/nem-bong-ep-gap-3-padding-everon/
 
 [thegioinem.com]
-match = -4.3%%
-title = Chăn Ga Everon EPM24068
-url = https://thegioinem.com/chan-ga-everon-epm24068.html
+match = 0.0%%
+title = Chăn Ga Everon EST24035
+url = https://thegioinem.com/chan-ga-everon-est24035.html
 
 [tongdailyeveron.com.vn]
 match = 0.0%%
