--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-08-10 19:21:44
+lastsearch = 2024-08-10 20:14:58
 
 [shopee.vn]
-match = -25.0%%
-title = Chiếu điều hòa 1m6; 1m8, 2m2 -Drap beding - mẫu4
-url = https://shopee.vn/Chiếu-điều-hòa-1m6-1m8-2m2-Drap-beding-mẫu4-i.18452594.18826561791
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 60.9%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
+match = -25.0%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -32,14 +32,14 @@ title = CHIẾU ĐIỀU HÒA CAO SU NON
 url = https://giadunganhvan.vn/chieu-dieu-hoa-cao-su-non-p769.html
 
 [thegioinem.com]
-match = -4.2%%
-title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
-url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
+match = 29.2%%
+title = 10+ mẫu chiếu điều hoà hot nhất năm
+url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
 [sieuthidem.vn]
 match = 16.7%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOop6Ve1h3ObcDOP-6NaUtPtbBejOVzRkilSZ1tfv3tDDv6nGusaL
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [lybalansieucute.com]
 match = 29.2%%
@@ -47,14 +47,14 @@ title = CHIẾU ĐIỀU HÒA NỘI ĐỊA NANJIREN 11-18
 url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [suongtuyet.com]
-match = 4.2%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -41.7%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = -58.3%%
-title = Chiếu điều hòa cao su non , Chiếu điều hoà tencel latex ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-tencel-latex-tang-kem-2-vo-goi-da-nang-nhap-khau-loai-day-co-the-giat-may-i1719727918.html
+match = 8.3%%
+title = Chiếu Mây Điều Hòa Chiếu mát mùa hè. ...
+url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html
 
 [ababy.com.vn]
 match = -4.2%%
