--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-10 17:34:52
+lastsearch = 2024-08-10 20:19:07
 
 [shopee.vn]
-match = -25.0%%
-title = Chiếu mây điều hòa lót lụa cao cấp có chun bo góc giúp cố ...
-url = https://shopee.vn/Chiếu-mây-điều-hòa-lót-lụa-cao-cấp-có-chun-bo-góc-giúp-cố-định-chiếu-Chiếu-điều-hoà-sợi-mây-viền-lụa-thoáng-khí-tốt-i.472596491.13662110393
+match = 14.3%%
+title = Chiếu Điều Hòa Lụa Tơ Tằm Nhập Khẩu Cao Cấp ...
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Tơ-Tằm-Nhập-Khẩu-Cao-Cấp-Chiếu-Có-Lót-Thông-Hơi-Mát-Lạnh-Mùa-Hè-i.294575973.17493425546
 
 [chieutrelanlan.com]
 match = 19.0%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOopLyc_fwJNMXk-M-QfFy-Ge8jWd9DrtmgrcH4Rowtysi8GE2p-5
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOopgrSDELwyPVlgvoBS8NCqF75BXFxXSEiO_wCxV8s5UvoKjmpZq
 
 [kyoryo.vn]
 match = -35.7%%
@@ -99,7 +99,7 @@ url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 [vtvhyundai.vn]
 match = -14.3%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOopLBeutQbwnTfDJ1VF0noaYD8_wXFa69Gr9bS2dywHlmMFjXlH9
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoo5xZKCshIDQS0JmVd-DlMn7q3jGGwWNraqFCI16aPjX-70BjZI
 
 [noithattana.vn]
 match = 21.4%%
