--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-10 15:32:53
+lastsearch = 2024-08-10 20:14:34
 
 [shopee.vn]
 match = -28.0%%
@@ -49,7 +49,7 @@ url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-n
 [books.google.com]
 match = -116.0%%
 title = Địa chí Bắc Giang: địa lý và kinh tế - Page 302 - Google Books Result
-url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA302&lpg=PA302&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=7KD0ud10xI&sig=ACfU3U0RaQNIVxrqDAU1XGKOgQkPxB0lUg&hl=en&sa=X&ved=2ahUKEwj00v_YgeqHAxULFlkFHeV1O3cQ6AF6BAgXEAM
+url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA302&lpg=PA302&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=7KD0uf_-xK&sig=ACfU3U2jfYM8k8LPB7nvaYCBZr1ukeiIpw&hl=en&sa=X&ved=2ahUKEwiKuK_UwOqHAxVtFlkFHZIYK7gQ6AF6BAgaEAM
 
 [cellphones.com.vn]
 match = -52.0%%
