--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-10 18:19:10
+lastsearch = 2024-08-10 20:26:59
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -180.0%%
-title = MOVSA - Melbourne Overseas Vietnamese Student ...
-url = https://www.facebook.com/movsa.vn/posts/-𝐃𝐄𝐏𝐀𝐑𝐓𝐔𝐑𝐄-𝐁𝐑𝐈𝐄𝐅𝐈𝐍𝐆-𝐊𝐈𝐂𝐊-𝐒𝐓𝐀𝐑𝐓-️𝐌𝐎𝐕𝐒𝐀-𝐱-𝐒𝐄𝐓-𝐄𝐃𝐔𝐂𝐀𝐓𝐈𝐎𝐍___________________________/754660916690225/
+match = -253.3%%
+title = [ Black Kingdom - D2 ] Sân chơi đốt cháy niềm đam mê game ...
+url = https://www.facebook.com/blackkingdom.ngt/videos/-black-kingdom-d2-sân-chơi-đốt-cháy-niềm-đam-mê-game-thủ-của-bạnvới-từng-cấu-hìn/767331274830836/?locale=hi_IN
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -442,8 +442,8 @@ title = Bản đồ Trường
 url = https://hnue.edu.vn/gioithieu/bandotruong
 
 [vishipel.com.vn]
-match = -226.7%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
+match = -253.3%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.giclandgroup.vn]
