--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-08-10 16:22:11
+lastsearch = 2024-08-10 20:30:29
 
 [dvan.org]
 match = -41.7%%
@@ -89,7 +89,7 @@ url = https://tiki.vn/search?q=gối ôm
 [changagoidemsonghong.net]
 match = -108.3%%
 title = Gối ôm Sông Hồng Chính Hãng Giá Rẻ
-url = https://changagoidemsonghong.net/goi-om-song-hong-chinh-hang-gia-re/?srsltid=AfmBOorMs4o8OmUQXingdNRuq5N1tyXuis4byAHhAGYv8Znq-ZHDe8cy
+url = https://changagoidemsonghong.net/goi-om-song-hong-chinh-hang-gia-re/
 
 [suongtuyet.com]
 match = -58.3%%
