--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-10 20:04:16
+lastsearch = 2024-08-10 20:31:09
 
 [www.everonvn.vn]
 match = -38.7%%
@@ -39,7 +39,7 @@ url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
 [demxanh.com]
 match = -19.4%%
 title = Đệm Foam Everon ExtraFoam chính hãng giá rẻ Hà Nội
-url = https://demxanh.com/dem-foam-everon-extrafoam.html?srsltid=AfmBOorprYQBSrT5ClTcJA722e3EzjY_xRDIMPKCom55Ci97bGnnN4hA
+url = https://demxanh.com/dem-foam-everon-extrafoam.html
 
 [everon.online]
 match = 0.0%%
@@ -62,9 +62,9 @@ title = Nệm bông ép gấp 3 Padding Everon
 url = https://khonemtonghop.com/nem-bong-ep-gap-3-padding-everon/
 
 [thegioinem.com]
-match = 0.0%%
-title = Chăn Ga Everon EST24035
-url = https://thegioinem.com/chan-ga-everon-est24035.html
+match = -4.3%%
+title = Chăn Ga Everon EPM24068
+url = https://thegioinem.com/chan-ga-everon-epm24068.html
 
 [tongdailyeveron.com.vn]
 match = 0.0%%
