--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-10 19:23:08
+lastsearch = 2024-08-10 20:26:17
 
 [everonvn.com.vn]
 match = -94.4%%
 title = Bộ Everon Ep 1738 - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738?srsltid=AfmBOood596ZzgLJRBhAsa-c_W_JrS3M7xGMYKTskTQqd7J4n8TFyOSt
+url = https://everonvn.com.vn/everon/553/bo-everon-ep-1738
 
 [www.lazada.vn]
-match = -50.0%%
-title = Vỏ Gối Nằm Lẻ Everon Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/vo-goi-nam-le-everon/?page=2&srsltid=AfmBOoolR6AOxqDvND7RNdBm6Hh0P-MMFFJgNvjbCszvWoQPzhjFZ-Wc
+match = -133.3%%
+title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
+url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,7 +34,7 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = -11.1%%
 title = Vỏ gối EPM21070 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm21070-45x65.html?srsltid=AfmBOopCZLTGO-vCO4tqEK3QqAQjoCMmmCef4HdBUKV6ejqL20Iv9j0N
+url = https://www.diepxuan.com/vo-goi-epm21070-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
